Add watermarks in the colophon page

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -676,6 +676,8 @@
 \hypertarget{colophon}{}%
 \bookmark[dest=colophon,level=section]{版次标记}%
 \enlargethispage{1.75\baselineskip}
+\pdfoverlaySetGraphicsOptions{height=\paperheight}%
+\pdfoverlaySetPDF{multiple-language-copyright.pdf}
 \input{colophon.tex}
 \cleardoublepage
 
