--- a/latex/copyright.tex
+++ b/latex/copyright.tex
@@ -104,7 +104,7 @@ typographical layouts, font styles, font sizes, and illustrations.
 See also \url{https://github.com/neo954/sichuan-cookbook} for information
 about \textit{Sichuan Cookbook 1972 Remake}.
 
-Alpha electronic edition, \today.
+Beta electronic edition, \today.
 
 \endgroup%
 
