Revise note for XU

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -129,7 +129,7 @@
 五五、罈子肉。《八》本目录中作“罐子肉”。误。《中》本目录中作“坛子肉”，内页
 中作“罎子肉”。
 
-五五、六九、一五三，“须”。《四》本作“鬚”。径改。
+五五、六九、一五三，“须”。《四》本作“鬚”。据《八》本改。
 
 五六、烤酥方。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本皆
 作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
