--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -157,8 +157,7 @@
 一二〇、一二一、一二三、二二三、二五七、二六二，“𬂁”。“肫”之异体字。鸟类的胃。
 
 一二〇、一二九、一三〇、一三二、一三三、一三四、一三五、一三六、一三七、一三
-八、一四一、一四三、一四四、一五一、一五二、二七二，“鳃”。《四》本作“腮”。径
-改。
+八、一四一、一四三、一四四、一五一、一五二、二七二，“鳃”。各本作“腮”。径改。
 
 一二一、汆双脆。《四》本《八》本标题作“川双脆”。径改。
 
