Revise note for recipe 212

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -196,7 +196,7 @@
 
 二〇七、八宝酿藕。“百合”，《四》本《八》本作“白合”。径改。
 
-二一二、盐白菜冬笋。“大拇指”，《四》本作“大姆指”。径改。
+二一二、盐白菜冬笋。“大拇指”，《四》本《八》本作“大姆指”。据《中》本改。
 
 二二三、二六一，“什锦”。《四》本《八》本作“什景”。径改。
 
