Add a note for LAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -116,6 +116,9 @@
 
 三九、四八、四九，“擀”。《四》本作“扞”。据《八》本改。
 
+四四、四九、八七、一〇六、一一七、二〇六、二四八，“烂”。《四》本《八》本作
+“滥”。径改。
+
 四八、菠饺白肺。“水龙头”，《四》本《八》本作“水笼头”。径改。
 
 五〇、七九、八五、九一、一五八、二一四、二二〇、二三〇、二五六、二六〇、二七
