--- a/latex/recipe-049.tex
+++ b/latex/recipe-049.tex
@@ -55,7 +55,7 @@
 去掉为止。此时肚片则变为细嫩、柔软、半透明，如玻璃体状。
 
 \step 痩肉用刀背砸茸，先用一两剔尽筋缠，加入酱油、料酒、香油及味精、胡椒面、盐
-各少许拌成馅。菠菜淘洗干净，用手揉滥，挤水，拌干面粉，调匀，揉成绿色子面，擀成
+各少许拌成馅。菠菜淘洗干净，用手揉烂，挤水，拌干面粉，调匀，揉成绿色子面，擀成
 圆形饺皮二十四张，将馅包入成半圆形的“成都水饺”式样，用沸水煮熟打起，与肚片在
 大碗内对镶好。
 
