--- a/latex/recipe-087.tex
+++ b/latex/recipe-087.tex
@@ -52,7 +52,7 @@
 碗内用力一股劲快速搅成蛋泡如雪花，再将面粉倒下，调匀成略带粘性的蛋清汁。
 
 \step 鸡脯用刀片成极薄的片，长一寸二、薄八分；好干豆粉在墩上擀细用箩筛过，连同
-鸡片，逐片用刀背轻轻细砸，使鸡片再向四周展伸而薄，但要砸至成片不滥。
+鸡片，逐片用刀背轻轻细砸，使鸡片再向四周展伸而薄，但要砸至成片不烂。
 
 \step 猪油烧至四成火候的温油，用筷将鸡片拈在调好的蛋清汁内粘一层入锅浸炸，炸泡
 拈起，边炸边拈，保持白色，盛入盘。
