--- a/latex/recipe-106.tex
+++ b/latex/recipe-106.tex
@@ -53,7 +53,7 @@
 酒将鸭身内外抹匀，放入葱、姜、花椒，上笼蒸约一小时取出，去掉姜、葱、花椒，用刀
 从背脊处宰开，取净全身大小骨头后铺入二鱼碗，齐碗口修去边沿，成圆形定好。修下的
 鸭肉切成与白果大的丁颗，连同白果造匀，放于鸭脯上，将原汁泌入，加汤上笼蒸半小
-时，至𤆵滥翻入圆盘内。
+时，至𤆵烂翻入圆盘内。
 
 \step 锅内渗清汤，加余下的料酒、盐、味精、胡椒、水豆粉少许勾二流芡，放鸡油，挂
 白汁于鸭上即成。
