--- a/latex/recipe-248.tex
+++ b/latex/recipe-248.tex
@@ -48,7 +48,7 @@
 \preparation
 
 \step 鸽蛋洗干净，用碗装起，盛入清水，淹过鸽蛋，上笼蒸二十分钟取下，用清水冷
-却，轻轻将蛋壳剥去。细心地不要将鸽蛋剥滥，保持完整。用刀逢中切开，两头大小相
+却，轻轻将蛋壳剥去。细心地不要将鸽蛋剥烂，保持完整。用刀逢中切开，两头大小相
 等。鸡蛋二个摊成蛋皮，连同丝瓜皮、火腿各修切成小瓜子片、鱼眼睛片，各七十二片待
 用。
 
