--- a/latex/recipe-117.tex
+++ b/latex/recipe-117.tex
@@ -50,7 +50,7 @@
 \preparation
 
 \step 鸭子去内脏和足、嘴，清洗干净，于沸水中微煮，抹盐、料酒，加葱、姜放于大碗
-内，上笼蒸𤆵。取出晾冷，剔去全部骨头（注意保持鸭皮完整，不要弄破滥），将鸭肉取
+内，上笼蒸𤆵。取出晾冷，剔去全部骨头（注意保持鸭皮完整，不要弄破烂），将鸭肉取
 下。
 
 \step 取下的鸭肉切成头粗丝，肥膘、火腿、慈菇切成二粗丝。
