--- a/latex/recipe-206.tex
+++ b/latex/recipe-206.tex
@@ -44,7 +44,7 @@
 
 \step 白糖、玫瑰、面粉、化猪油拌匀成玫瑰馅。
 
-\step 鲜慈菇将皮削净，洗净皮渣，用刀拍滥，剁成细泥（不现颗粒），加细酒米粉拌
+\step 鲜慈菇将皮削净，洗净皮渣，用刀拍烂，剁成细泥（不现颗粒），加细酒米粉拌
 匀，用蒸碗盛起上笼蒸熟取下，趁热将慈菇泥分成汤圆大小的量，用干净湿帕垫在手上逐
 个包入玫瑰馅，捏成扁圆形的饼，沾清水将交口处抹光滑。全部包好后，撒上一层过箩的
 干豆粉待用。
