Add a commet for SANJUN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -148,6 +148,9 @@
 
 七三、旱蒸全鸡。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
+七四、三菌炖鸡。脚注{\footnotesize\circled{1}}中“……盛产于成都附近山崖中。”
+《四》本《八》本作“……盛产于成都近郊。”据《中》本改。
+
 八七、牡丹鸡片。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
 九四、五彩鸡片。“㮟”，《八》本作“扞”。误。
