Revise comment for recipe 205

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -198,7 +198,8 @@
 
 二〇四、蜜汁苕蛋。“青糖”，《四》本《八》本作“清糖”，径改。
 
-二〇五、糯米圆子。“圆子”，《四》本《八》本《中》本作“元子”。径改。
+二〇五、糯米圆子。“圆子”，《四》本《八》本《中》本作“元子”。径改。“入沸水潦过
+心”。“潦”，疑误。
 
 二〇七、八宝酿藕。“百合”，《四》本《八》本作“白合”。径改。
 
