Add a note for recipe 106

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -160,6 +160,8 @@
 
 一〇二、魔芋烧鸭。“魔芋”，《四》本《八》本作“茉芋”。径改。
 
+一〇六、银杏鸭脯。“锅内掺清汤”。“掺”，《四》本《八》本作“渗”。径改。
+
 一二〇、一二一、一二三、二二三、二五七、二六二，“𬂁”。“肫”之异体字。鸟类的胃。
 
 一二〇、一二九、一三〇、一三二、一三三、一三四、一三五、一三六、一三七、一三
