Move the footnote mark

--- a/latex/recipe-143.tex
+++ b/latex/recipe-143.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{黄焖大鲢鱼头}
+\begin{recipe}{黄焖大鲢鱼头}[\footnotemark]
 
 \ingredients
 
-\ingredient{鲢鱼头}[\footnotemark]{一个约四五斤}
+\ingredient{鲢鱼头}{一个约四五斤}
 \ingredient{猪肥膘肉}{五两}
 \ingredient{料酒}{六两}
 \ingredient{酱油}{二两}
