Add a note for recipe 101

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -158,6 +158,8 @@
 九五、刷把鸡丝。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》
 本作“气”。误。
 
+一〇一、包烧鸡。“鸡翘”，疑误。
+
 一〇二、魔芋烧鸭。“魔芋”，《四》本《八》本作“茉芋”。径改。
 
 一〇六、银杏鸭脯。“锅内掺清汤”。“掺”，《四》本《八》本作“渗”。径改。
