--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -116,6 +116,12 @@
 
 三九、四八、四九，“擀”。《四》本作“扞”。据《八》本改。
 
+四〇、锅贴腰片。“磉磴”。
+“磉”，{s\v{a}ng}{ㄙ\kern-.25emㄤ\kern-.75em\raise.5ex\hbox{\v{}}\kern.25em}%
+柱下石也。
+“磴”，{d\`{e}ng}{ㄉ\kern-.25emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}%
+石阶。
+
 四四、四九、八七、一〇六、一一七、二〇六、二四八，“烂”。《四》本《八》本作
 “滥”。径改。
 
@@ -139,7 +145,7 @@
 《中》本改。
 
 六三、辣子鸡丁。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
-读作{ch\'{a}n}{ㄔ\kern-.25emㄢ\kern-.75em\raise.25ex\hbox{\'{}}\kern.25em}。
+读作{ch\'{a}n}{ㄔ\kern-.25emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
 
 六七、六八、八二、九二、一一八、一二七、一五〇、二五五、二八〇、三〇一，“熘”。
 《四》本《八》本作“溜”。径改。
@@ -231,7 +237,7 @@
 
 二六九、清汤竹荪肝膏。“竹荪”，《四》本《八》本《重》本皆作“竹参”。径改。
 
-二七三、旱蒸鱼。各本标题皆作“旱蒸鱼”。径改。
+二七三、旱蒸鱼。各本标题皆作“汗蒸鱼”。径改。
 
 二九二、奶汤素烩。“莴笋”，《四》本《八》本作“窝笋”。径改。
 
