Add spaces between characters

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -117,9 +117,9 @@
 三九、四八、四九，“擀”。《四》本作“扞”。据《八》本改。
 
 四〇、锅贴腰片。“磉磴”。
-“磉”，{s\v{a}ng}{ㄙ\kern-.25emㄤ\kern-.75em\raise.5ex\hbox{\v{}}\kern.25em}%
+“磉”，{s\v{a}ng}{ㄙ\kern-.25emㄤ\kern-.75em\raise.5ex\hbox{\v{}}\kern.25em}
 柱下石也。
-“磴”，{d\`{e}ng}{ㄉ\kern-.25emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}%
+“磴”，{d\`{e}ng}{ㄉ\kern-.25emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}
 石阶。
 
 四四、四九、八七、一〇六、一一七、二〇六、二四八，“烂”。《四》本《八》本作
