--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -122,6 +122,8 @@
 “磴”，{d\`{e}ng}{ㄉ\kern-.25emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}
 石阶。
 
+四一、四二、七一、一二一、二五七，“𠟤”。疑误。
+
 四四、四九、八七、一〇六、一一七、二〇六、二四八，“烂”。《四》本《八》本作
 “滥”。径改。
 
