Add a note for recipe 100

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -166,6 +166,9 @@
 九五、刷把鸡丝。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》
 本作“气”。误。
 
+一〇〇、包烧鸡。“𫃕”，{c\'{i}}{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}
+粘稠。
+
 一〇一、包烧鸡。“鸡翘”，疑误。
 
 一〇二、魔芋烧鸭。“魔芋”，《四》本《八》本作“茉芋”。径改。
