--- a/latex/recipe-099.tex
+++ b/latex/recipe-099.tex
@@ -53,12 +53,12 @@
 
 \step 仔母鸡一只宰杀后放净血，去掉毛、足，从鸡背颈部上面，顺割约三寸长的口，用
 手挖去鸡膆，仰放在菜墩上，用刀从杀口处将鸡颈骨割断，再从鸡背颈刀口处将颈骨拉
-出。然后将鸡立放在菜墩上，用手将鸡皮肉略为用力向夕卜翻，并向下褪，鸡骨架就逐渐
-露出。鸡翅膀与胸腔骨相连的筋用刀割断，随顺着鸡的肉骨周围相连地方慢慢往下剐，边
-褪边剐，直剐到鸡的尾部，把鸡的骨架内脏取出。再用刀尖拨开鸡的两腿棒子骨，使棒子
-骨露出一点，两手用力将鸡腿肉往下按，棒子骨就全部露出，用刀剔下。此时鸡除头部、
-两翅外，骨头都已剔下（剔剐过程中，注意保持肉皮完整无破损）。再将鸡皮面翻出来，
-在清水中洗干净，滤干水份。
+出。然后将鸡立放在菜墩上，用手将鸡皮肉略为用力向外翻，并向下褪，鸡骨架就逐渐露
+出。鸡翅膀与胸腔骨相连的筋用刀割断，随顺着鸡的肉骨周围相连地方慢慢往下剐，边褪
+边剐，直剐到鸡的尾部，把鸡的骨架内脏取出。再用刀尖拨开鸡的两腿棒子骨，使棒子骨
+露出一点，两手用力将鸡腿肉往下按，棒子骨就全部露出，用刀剔下。此时鸡除头部、两
+翅外，骨头都已剔下（剔剐过程中，注意保持肉皮完整无破损）。再将鸡皮面翻出来，在
+清水中洗干净，滤干水份。
 
 \step 鲜豌豆仁用沸水煮熟去壳，漂在清水中，保持绿色。糯米淘洗后在沸水锅内煮透，
 以尚未成饭、米无硬心为度。莲米（退衣去心）、苡仁和芡实淘洗后用开水泡胀，装在碗
