--- a/latex/recipe-080.tex
+++ b/latex/recipe-080.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{五番脆皮鸡}
+\begin{recipe}{五香脆皮鸡}
 
 \ingredients
 
