--- a/latex/recipe-140.tex
+++ b/latex/recipe-140.tex
@@ -49,7 +49,7 @@
 \step 选肚黄、肉厚的大鳝鱼肉，切成二寸长的段，再顺切成一分宽的丝清菜除去叶根和
 筋，淘洗干净，切成九分长的段。
 
-\step 锅在旺火上倒入菜油烧红，放入鳝鱼丝煸炒，煸炒时荽不断用汤瓢翻动，使煸炒均
+\step 锅在旺火上倒入菜油烧红，放入鳝鱼丝煸炒，煸炒时要不断用汤瓢翻动，使煸炒均
 匀；约煸五分钟，加料酒、姜丝和蒜丝；炒匀后再煸一分钟，即放入豆瓣、盐和味精等炒
 匀；再加入芹菜，翻炒均匀；然后烹入醋炒均匀，马上起锅盛人盘中，最后撒上花椒面即
 成。
