--- a/latex/recipe-133.tex
+++ b/latex/recipe-133.tex
@@ -55,7 +55,7 @@
 \step 肥瘦肉剁为肉末；芽菜洗净，切成长一寸的段；葱白切成二寸长节节；泡辣椒去
 蒂、去尖、去籽，切成一寸五长的节；姜切成一寸长、二分宽、半分厚的片子。
 
-\step 炒锅在旺火上烧红，窗入菜油，浪转泌去，再换一两，将肉末下锅煵至散籽、亮
+\step 炒锅在旺火上烧红，舀入菜油，浪转泌去，再换一两，将肉末下锅煵至散籽、亮
 油、煵酥，先放盐、料酒、姜、葱再煵一下，即放鱼、𰪿糟、白糖、酱油，掺入清汤，在
 中火上烧十分钟，翻面再烧，烧至收干亮油。起锅时淋入香油，拈鱼入盘，再将锅内调料
 造匀，扦在鱼上即成。
