--- a/latex/recipe-048.tex
+++ b/latex/recipe-048.tex
@@ -64,7 +64,7 @@
 \step 猪肉去筋，在菜墩上用刀剁成细泥，加入香油、盐、冷清汤在碗内拌合成馅。火
 腿、鸡皮切成一寸二分长、八分宽的片待用。
 
-\step 玻菜淘洗予净，去茎留叶，在木瓢内用手搓揉成菜泥，用纱布包好挤出绿色菜汁，
+\step 玻菜淘洗干净，去茎留叶，在木瓢内用手搓揉成菜泥，用纱布包好挤出绿色菜汁，
 和入干面粉内拌匀（汁不够时可略加清水）用力揉成面团；再平均扯成二十四个小面剂，
 用小面棍擀成圆形饺皮。把拌好的馅分摊在饺皮上对折包成半圆形，饺边用手捏成细折，
 然后用清水把饺子煮好，端离火口，用时再捞出。
