--- a/latex/recipe-053.tex
+++ b/latex/recipe-053.tex
@@ -45,7 +45,7 @@
 
 \preparation
 
-\step 猪舌用开水煮约十分钟，刮净舌上粗皮，舌根询除不用，然后切成长一寸半、宽五
+\step 猪舌用开水煮约十分钟，刮净舌上粗皮，舌根切除不用，然后切成长一寸半、宽五
 分、厚一分半的片；猪尾去毛、去垢，用刀刮洗洁白，切成一寸半长的段；鲜猪蹄筋爪清
 水洗净，去掉蹄筋前边的痩肉，亦切成一寸半长的段。
 
