--- a/latex/recipe-053.tex
+++ b/latex/recipe-053.tex
@@ -50,7 +50,7 @@
 水洗净，去掉蹄筋前边的痩肉，亦切成一寸半长的段。
 
 \step 炒锅用旺火烧红，放入猪油，倾入切好的猪舌、猪尾、蹄筋，同时放入姜葱炒动；
-到炒尽水份时加料酒、冰糖汁、盐和二海；再烧至沸时，撇去汤面的浮沫，倒在砂锅内以
+到炒尽水份时加料酒、冰糖汁、盐和二汤；再烧至沸时，撇去汤面的浮沫，倒在砂锅内以
 微火煨煮二小时，拈去姜葱，倒在盘内；将青菜心洗净捞起，镶于盘角，以衬其色（不用
 青菜亦可）。
 
