--- a/latex/recipe-202.tex
+++ b/latex/recipe-202.tex
@@ -34,7 +34,7 @@
 \ingredient{陕枣}{五两}
 \ingredient{猪板油}{三两五}
 \ingredient{鸡蛋}{二个}
-\ingredient{红苔}{三两}
+\ingredient{红苕}{三两}
 \ingredient{慈菇}{二两}
 \ingredient{网油}{二两}
 \ingredient{瓜片}{五钱}
