--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -211,6 +211,8 @@
 
 一九四、佛手海参。“白铝盘”，《四》本《八》本作“白锑盘”。径改。
 
+二〇二、二〇四，“红苕”。亦称番薯、红薯、甘薯。
+
 二〇四、蜜汁苕蛋。“青糖”，《四》本《八》本作“清糖”，径改。
 
 二〇五、糯米圆子。“圆子”，《四》本《八》本《中》本作“元子”。径改。“入沸水潦过
