--- a/latex/recipe-253.tex
+++ b/latex/recipe-253.tex
@@ -57,7 +57,7 @@
 
 \step 将鸽蛋连壳在笼上蒸熟，约一刻钟取出，用清水稍浸，即逐个剥去外壳，放在干豆
 粉上滚动，使鸽蛋上都裹上一层豆粉。再将炸鸽子的原油倒入炒锅中，放在旺火上烧至五
-成热，把鸽蛋顺锅边投入，用汤瓢慢慢拨动，炸约五分钟，至鸽蛋觅黄色即捞起待用。
+成热，把鸽蛋顺锅边投入，用汤瓢慢慢拨动，炸约五分钟，至鸽蛋见黄色即捞起待用。
 
 \step 鸽子蒸好后去掉碗口的皮筋纸及姜、葱、花椒不用，取出鸽子摆在盘内，下面两
 只，上面一只，再将炸好的鸽蛋镶在鸽子的周围。随后把蒸鸽子的原汁汤泌在炒锅里，加
