Revise note for recipe 143

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -186,12 +186,13 @@
 改。“肉𤆵可口”，《中》本作“肉烂可口”。“但须注意甲鱼肉不可与苋菜同食”。“甲鱼
 肉”，《中》本作“龟鳖肉”。
 
-一四三、黄焖大鲢鱼头。“竹篾箅”，《四》本《八》本作“竹篾篦”。据《中》本改。
-“即用筷子将鱼肉轻轻拨下”，《四》本《八》本作“……轻轻试一下”。据《中》本改。
-脚注{\footnotesize\circled{1}}中“而不是一般池塘养的鲢鱼”，《四》本《八》本无此
-句。据《中》本补。之后“但四川人习惯上……”，《四》本《八》本无“但”字。据《中》本
-补。脚注{\footnotesize\circled{1}}中“身圆口大”，《四》本《八》本作“身团口大”。
-据《中》本改。
+一四三、黄焖大鲢鱼头。《四》本《八》本中脚注标记{\footnotesize\circled{1}}在
+“原料”段落中“鲢鱼头一个约四、五斤”之后。据《中》本改至标题之后。“竹篾箅”，
+《四》本《八》本作“竹篾篦”。据《中》本改。“即用筷子将鱼肉轻轻拨下”，《四》本
+《八》本作“……轻轻试一下”。据《中》本改。脚注{\footnotesize\circled{1}}中“而不
+是一般池塘养的鲢鱼”，《四》本《八》本无此句。据《中》本补。之后“但四川人……”，
+《四》本《八》本无“但”字。据《中》本补。脚注{\footnotesize\circled{1}}中“身圆
+口大”，《四》本《八》本作“身团口大”。据《中》本改。
 
 一四四、五柳鱼。“酱油、白糖、醋、味精、水豆粉、料酒、清汤先兑成滋汁一碗。”“白
 糖”，《八》本作“冰糖”。
