Add a note for YAOZHU

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -142,6 +142,9 @@
 
 五五、六九、一五三，“须”。《四》本作“鬚”。据《八》本改。
 
+五五、一八六、一八八、一八九、二二三、二六一、二八八、二九三，“𧎼蛀”。今作
+“珧柱”。干贝。
+
 五六、烤酥方。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本皆
 作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
 《中》本改。
