Revise note for KA

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -164,7 +164,8 @@
 
 八七、牡丹鸡片。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
-九四、五彩鸡片。“㮟”，《八》本作“扞”。误。
+九四、五彩鸡片。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}{ㄎ\kern-.25emㄚ}
+（紧）夹；扎；刺。
 
 九五、刷把鸡丝。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》
 本作“气”。误。
