--- a/latex/recipe-204.tex
+++ b/latex/recipe-204.tex
@@ -44,14 +44,14 @@
 \ingredient{化猪油}{二两}
 \ingredient{干酒米粉}{三两}
 \ingredient{干豆粉}{一两}
-\ingredient{桔红}{一两}
+\ingredient{橘红}{一两}
 
 \preparation
 
 \step 选红心子红苕洗净，削去皮，上笼蒸𤆵，取出用漏瓢按成苕泥，由漏孔滤出，盛
 入海碗，加酒米粉拌匀。
 
-\step 芝麻炕热扦碎；瓜砖、桔红、蜜樱桃、蜜枣均切成细颗；杏仁下油锅炸脆，捞起剁
+\step 芝麻炕热扦碎；瓜砖、橘红、蜜樱桃、蜜枣均切成细颗；杏仁下油锅炸脆，捞起剁
 细；莲子去皮、去心，蒸𤆵，剁细；板油去皮，宰细，加白糖、玫瑰、化猪油、干豆粉，
 同以上各料合拌成馅。
 
