--- a/latex/recipe-207.tex
+++ b/latex/recipe-207.tex
@@ -34,7 +34,7 @@
 \ingredient{鲜藕}{一斤}
 \ingredient{酒米}{四两}
 \ingredient{蜜樱桃}{一两}
-\ingredient{桔红}{五钱}
+\ingredient{橘红}{五钱}
 \ingredient{瓜片}{五钱}
 \ingredient{苡仁}{五钱}
 \ingredient{百合}{五钱}
@@ -49,10 +49,10 @@
 竹筷按孔透畅通；再将干酒米由孔装入抖紧，并用刀背敲拍孔口，使之封闭不漏；放入沸
 水中煮把，捞于清水中漂起，刮去藕外面一层粗皮，切成两分厚的圆片待用。
 
-\step 莲米刷净去心，连同苡仁、百合、芡实洗净，加清水上笼蒸𤆵；瓜片、桔红切成指
+\step 莲米刷净去心，连同苡仁、百合、芡实洗净，加清水上笼蒸𤆵；瓜片、橘红切成指
 甲壳；蜜樱桃对剖。
 
-\step 网油修成一方铺于蒸碗内，即将蜜樱桃随意摆上成花纹图案，再相继放入瓜片、桔
+\step 网油修成一方铺于蒸碗内，即将蜜樱桃随意摆上成花纹图案，再相继放入瓜片、橘
 红、苡仁、百合、芡实、莲米，等材料，同时将藕片摆成风车车定好，撒入白糖二两，放
 笼上再蒸至极𤆵，走菜时翻于圆盘内，揭去网油，将其余白糖收成糖清挂上即成。
 
