--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -221,6 +221,8 @@
 二〇四、蜜汁苕蛋。“青糖”，《四》本《八》本作“清糖”，径改。“青糖”，粗制赤（红）
 糖。
 
+二〇四、二〇七，“橘红”。《四》本《八》本作“桔红”。径改。
+
 二〇五、糯米圆子。“圆子”，《四》本《八》本《中》本作“元子”。径改。“入沸水潦过
 心”。“潦”，疑误。
 
