--- a/latex/recipe-188.tex
+++ b/latex/recipe-188.tex
@@ -51,7 +51,7 @@
 皮。
 
 \step 蛋皮、丝瓜皮、火腿分别切成五至六分长细丝，连同𧎼蛀丝在一个大盘内和匀抖
-散，留三分之一在盘内均匀地铺开厂即将“鸡糁”舀成二十四至二十八个丸子在上面；再将
+散，留三分之一在盘内均匀地铺开；即将“鸡糁”舀成二十四至二十八个丸子在上面；再将
 其余三分之二的丝均匀地撒盖在丸子上面；然后再一个一个地拈入手中，将各丝连同丸子
 团成绣球形；放入笼内蒸五分钟至熟取出。
 
