--- a/latex/recipe-265.tex
+++ b/latex/recipe-265.tex
@@ -49,7 +49,7 @@
 
 刮洗干净，用清水以文火炖约五小时，取出削净毛眼和肉取其皮子。再将皮子用清水以文
 火炖至七成火候时（约需六小时），即取出洗净，切成骨牌块状，用沸水连续微煮三次
-（厨称出水三次），以去其胶质和骚气。
+（厨称出水三次），以去其胶质和臊气。
 
 猪油在旺火上煎辣，即放入葱姜快炒一、二铲，掺进肉汤，俟汤沸即取出葱姜不要。随即
 放入牛皮移置文火上烧约一小时，捞起滤干汤汁，置铝锅内，加进鸡汤、绍酒、生鸡油、
