--- a/latex/recipe-270.tex
+++ b/latex/recipe-270.tex
@@ -41,7 +41,7 @@
 
 \preparation
 
-去腰骚，片成薄片（腰有多大就切多大），用清水漂起。用一般汤将腰片稍煮去其血腥
+去腰臊，片成薄片（腰有多大就切多大），用清水漂起。用一般汤将腰片稍煮去其血腥
 味。
 
 冬菜在清汤内稍煮后，即加进胡椒面、味精、食盐，煮开后盛入碗中。再将煮过的腰片放
