Add a note for NAO

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -164,6 +164,9 @@
 七四、三菌炖鸡。脚注{\footnotesize\circled{1}}中“……盛产于成都附近山崖中。”
 《四》本《八》本作“……盛产于成都近郊。”据《中》本改。
 
+八一、雪花鸡淖。“淖”，
+{n\`{a}o}{ㄋ\kern-.25emㄠ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em} 泥也。
+
 八七、牡丹鸡片。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
 九四、五彩鸡片。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}{ㄎ\kern-.25emㄚ}
