--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -118,7 +118,7 @@
 
 四〇、锅贴腰片。“磉磴”。
 “磉”，{s\v{a}ng}{ㄙ\kern-.25emㄤ\kern-.75em\raise.5ex\hbox{\v{}}\kern.25em}
-柱下石也。
+柱下石。
 “磴”，{d\`{e}ng}{ㄉ\kern-.25emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}
 石阶。
 
