--- a/latex/recipe-002.tex
+++ b/latex/recipe-002.tex
@@ -54,7 +54,7 @@
 \step 葱花、姜、蒜、鱼辣椒末、木耳、白糖、酱油、醋、水豆粉，加好汤少许，在碗内
 兑成鱼香滋汁。
 
-\step 炒锅在旺火上烧红后，将油舀入锅内泌去，再换温油入锅，随将肉片倒下，用瓢子
+\step 炒锅在旺火上烧红后，将油舀入锅内滗去，再换温油入锅，随将肉片倒下，用瓢子
 解散，即将鱼辣椒末倒下，把肉片煵起红色，即将兑好的滋汁倒入，急炒几下起锅。
 
 \features
