--- a/latex/recipe-007.tex
+++ b/latex/recipe-007.tex
@@ -52,7 +52,7 @@
 
 \step 里脊肉放在菜墩上，横着肉纹切成长一寸、宽八分、厚半分的薄片，加上盐、料酒
 及蛋清豆粉，同时和匀。混合油放在锅内于旺火上烧至七成热，将花椒、干辣椒倒入炸成
-金红色，捞起剁成碎末，泌去炸油不用。白菜淘洗干净，切成比肉片稍大的碎块。姜去
+金红色，捞起剁成碎末，滗去炸油不用。白菜淘洗干净，切成比肉片稍大的碎块。姜去
 皮，切成二分见方的薄片。葱白切成八分长的段。
 
 \step 混合油放在锅内于旺火上烧至刚冒烟时，将豆瓣放入炒酥，依次迅速地放入白菜、
