--- a/latex/recipe-008.tex
+++ b/latex/recipe-008.tex
@@ -51,7 +51,7 @@
 \step 青蒜洗净，切为六至七分长的节；豆瓣剁细；蒸好的肉切成二分厚、一寸二宽、
 一寸五长、肥瘦相连的片。
 
-\step 旺火，热油浪匀。将肉片下锅，贴至微黄色吐油时，把多余的油泌去部分，陆续下
+\step 旺火，热油浪匀。将肉片下锅，贴至微黄色吐油时，把多余的油滗去部分，陆续下
 豆瓣、甜酱、青蒜合炒，最后放酱油簸匀起锅。
 
 \features
