--- a/latex/recipe-009.tex
+++ b/latex/recipe-009.tex
@@ -64,7 +64,7 @@
 面包揉搓成为粉）贴于锅上。待全部贴好后持锅于旺火上，左右来回移动烘烤，注意使受
 热面均匀，不要烤糊。约烘一分钟，肉片着锅面呈金黄色，能随锅活动起来时，即将另锅
 烧至冒大烟的猪油约四两（要先准备好）倒入，并把锅端起摆动一下，让油淌到贴在锅边
-的肉片上约二秒钟（经沸油浪后，未着锅的一面肉，由半熟而烫熟，吃起来更嫩），泌去
+的肉片上约二秒钟（经沸油浪后，未着锅的一面肉，由半熟而烫熟，吃起来更嫩），滗去
 油，摆入盘中。
 
 \step 用旺火将锅烧至冒烟，放入猪油，加葱花、姜、蒜米稍煵一下，烹入料酒，随即放
