--- a/latex/recipe-020.tex
+++ b/latex/recipe-020.tex
@@ -67,7 +67,7 @@
 在豆油皮上，铺成七分厚，铺上豆油皮的一半，再把另一半叠过来，接头处涂蛋清豆粉封
 口，如图\,\ref{松子肉包叠法图}\,。
 
-\step 炒锅倒入菜油烧红，将叠好的豆油皮包放入炸透，炸成金黄色，泌去炸油，放盘中
+\step 炒锅倒入菜油烧红，将叠好的豆油皮包放入炸透，炸成金黄色，滗去炸油，放盘中
 晾冷。再用刀切成一寸半长、
 \begin{wrapfigure}[5]{l}{10em}%
 \centering%
