--- a/latex/recipe-024.tex
+++ b/latex/recipe-024.tex
@@ -55,7 +55,7 @@
 
 \step 炒锅置于文火上，将猪油烧至三成热，把调好的蛋泡倒入一半，煎成圆形、直径约
 六寸的蛋饼。将炒熟的馅子，倒于蛋饼中心，立即将另一半蛋泡盖于馅子上，并按上鲜豆
-尖。同时另用一锅将全部猪油烧沸，再慢慢舀淋入锅内的蛋泡上。油舀完约五分钟，泌去
+尖。同时另用一锅将全部猪油烧沸，再慢慢舀淋入锅内的蛋泡上。油舀完约五分钟，滗去
 油，扦入盘内即成。
 
 \features
