--- a/latex/recipe-028.tex
+++ b/latex/recipe-028.tex
@@ -53,7 +53,7 @@
 
 \step 油在炒锅内用旺火烧热，下冰糖炒成汁，舀入少许鼎锅内的汤把糖汁冲散。加料
 酒、酱油、葱（挽成结）、姜（拍破）、盐，用汤瓢荡匀翻入鼎锅。继续焅两小时，用筷
-子将肘子拈入大圆盘摆好。滋汁泌入炒锅内，加味精，勾芡，收酽后淋在肘子上即成。
+子将肘子拈入大圆盘摆好。滋汁滗入炒锅内，加味精，勾芡，收酽后淋在肘子上即成。
 
 \features
 
