--- a/latex/recipe-029.tex
+++ b/latex/recipe-029.tex
@@ -52,7 +52,7 @@
 \step 用铝锅一个，把洗净的鸡（或骨）放入垫底，取其鲜味，且避免巴锅，上面铺放炸
 好的猪肉，必须猪皮向上。随即用炒锅炒好冰糖汁，烹入清汤并加料酒、盐、香料、葱、
 姜，浪转后倒入铝锅。在微火上烧至六成𤆵时，将猪肉翻面，肉皮即向下了，继续以微火
-烧𤆵。此时汤已收酽，把滋汁泌入碗内，即将肉翻入圆盘，拣去垫底的骨头及姜、葱，然
+烧𤆵。此时汤已收酽，把滋汁滗入碗内，即将肉翻入圆盘，拣去垫底的骨头及姜、葱，然
 后淋上滋汁即成。
 
 \features
