--- a/latex/recipe-031.tex
+++ b/latex/recipe-031.tex
@@ -53,7 +53,7 @@
 
 \step 取用包罐（或铝锅），垫上鸡骨（鸡足、翅、篾巴均可），将肉皮向上放入包罐，
 加酱油、葱、姜、料酒、花椒、盐、糖汁、冰糖，二汤淹过猪肉两寸，在武火上烧沸后改
-用文火烧至七成𤆵时，将猪肉翻面继续烧𤆵盛入盘内，再将收浓的滋汁泌起淋上即成。
+用文火烧至七成𤆵时，将猪肉翻面继续烧𤆵盛入盘内，再将收浓的滋汁滗起淋上即成。
 
 \features
 
