--- a/latex/recipe-036.tex
+++ b/latex/recipe-036.tex
@@ -48,7 +48,7 @@
 
 \step 选五花猪肉一方，放入汤锅内煮三分钟，去净血水泡沫，捞出晾冷，去皮，切二分
 厚的片，盛入大碗中，加料酒，红、白酱油，再把老姜拍松，葱切段拌匀，平放于大平盘
-中，上笼蒸一点半钟，出笼泌去汁水，晾冷待用。
+中，上笼蒸一点半钟，出笼滗去汁水，晾冷待用。
 
 \step 鸡蛋清和干豆粉一起拌匀。甜酱和香油一起拌匀。蒜切成片。葱白洗净，切成一寸
 长的段。
