--- a/latex/recipe-037.tex
+++ b/latex/recipe-037.tex
@@ -68,9 +68,9 @@
 糖、醋、酱油等佐料，用碗盛好调匀，成为糖醋汁。
 
 \step 菜油倒入炒锅内烧沸，将蒸好的肥肠取出（要炸时才取，葱、姜等不要），放在盘
-内将水泌干，顺着锅边放入锅内，并立即用汤瓢将肠拨横过来，不使两头肠口向着人（因
+内将水滗干，顺着锅边放入锅内，并立即用汤瓢将肠拨横过来，不使两头肠口向着人（因
 为肠内有水，刚一下锅要炸几下，溅起来的油容易烫伤人）。炸时要用汤瓢拨动肥肠，以
-便炸匀。约五分钟，肠呈金红色，即把油泌去，淋上香油，颠两下即捞出。然后在案板上
+便炸匀。约五分钟，肠呈金红色，即把油滗去，淋上香油，颠两下即捞出。然后在案板上
 用刀把肥肠切成四分厚的圆圈，堆在盘的中间，盘的两端分别放上拌好的生菜和葱酱蒜。
 再在炸班指的原锅内将糖醋汁煎热，盛在两个汤杯内，与班指一同上桌。
 
