--- a/latex/recipe-038.tex
+++ b/latex/recipe-038.tex
@@ -51,7 +51,7 @@
 将肚花拌匀。
 
 \step 炒锅内放入猪油烧沸，投入肚花微炸，约三分钟以漏瓢捞入盘中，把它分散开，不
-要几块结成一团。此时锅内炸油较前为烫，再将肚花放入，炸至稍带黄色，约四分钟泌去
+要几块结成一团。此时锅内炸油较前为烫，再将肚花放入，炸至稍带黄色，约四分钟滗去
 炸油，加入香油，簸匀起锅，盛入盘中。
 
 \step 以花椒末与盐拌匀盛入小碟，汤杯内放入醋加数滴香油拌匀，吃时分别蘸用。
