--- a/latex/recipe-049.tex
+++ b/latex/recipe-049.tex
@@ -51,7 +51,7 @@
 烂。
 
 \step 用清水少许将草碱溶化于肚片上造匀，在盆内浸渍半小时后，用沸水冲入盖严；烫
-焖十分钟揭盖，即将碱水泌去，另换清水；每隔五分钟换一次，如是换四次，直到将碱味
+焖十分钟揭盖，即将碱水滗去，另换清水；每隔五分钟换一次，如是换四次，直到将碱味
 去掉为止。此时肚片则变为细嫩、柔软、半透明，如玻璃体状。
 
 \step 痩肉用刀背砸茸，先用一两剔尽筋缠，加入酱油、料酒、香油及味精、胡椒面、盐
