--- a/latex/recipe-054.tex
+++ b/latex/recipe-054.tex
@@ -58,7 +58,7 @@
 \step 豆渣放蒸碗中，上蒸笼蒸二十分钟，出笼晾冷，用净布包着挤干水。锅放炉上烧
 红，倒入猪油烧开，再放入豆渣，用微火炒五分钟。炒时注意常用汤瓢拨刮锅心，以免豆
 渣巴锅。炒至油和豆渣合为一体时，再加猪油四两，继续用微火炒五分钟，然后加猪油二
-两，继续用微火炒，要炒酥炒香，炒至豆渣不吐油，再吐油时泌去余油，起锅待用。
+两，继续用微火炒，要炒酥炒香，炒至豆渣不吐油，再吐油时滗去余油，起锅待用。
 
 \step 姜、葱洗净，用刀把姜拍松，用稀眼净布把姜、大葱、花椒、胡椒、八角、草果包
 好待用。
