--- a/latex/recipe-055.tex
+++ b/latex/recipe-055.tex
@@ -60,7 +60,7 @@
 
 \step 海参用温水泡十六小时，洗净泥砂，挖去肠脏，切成长一寸、宽六分的条方块；用
 二汤汆二次，用清水漂冷心，再用净布一方包好。鱼翅用温水泡十分钟，洗净上面的胶
-水，去净子骨和杂质，放入大碗中，加清水一斤半，上笼蒸一小时，出笼泌去水，再用二
+水，去净子骨和杂质，放入大碗中，加清水一斤半，上笼蒸一小时，出笼滗去水，再用二
 汤汆一次，用清水漂冷心，用稀眼净布一方包好。𧎼蛀用温水泡十分钟，洗净后用稀眼净
 布包好。口蘑用温水泡五分钟，洗净泥砂，去净根和杂质，用稀眼净布包好。大金钩洗
 净。墨鱼用温水泡半小时，去净骨和杂质，将每条撕成两半。猪骨洗净。猪肘子肉去净茸
