--- a/latex/recipe-065.tex
+++ b/latex/recipe-065.tex
@@ -46,7 +46,7 @@
 
 鸡肉剔骨，宰成六分见方丁颗，加料酒、酱油、葱、姜在碗内造匀，码十分钟。干辣椒去
 蒂、去籽，切成五分长的节子。菜油在旺火上烧红，将鸡丁倒下，炸干水气，油回复平
-静，鸡丁刚熟时即泌去菜油，留二两在锅内将花椒、辣椒节入锅内炝出味后，烹酱油、白
+静，鸡丁刚熟时即滗去菜油，留二两在锅内将花椒、辣椒节入锅内炝出味后，烹酱油、白
 糖、料酒及清汤少许（使干辣椒起到回润作用），在锅内炒四至五分钟，起锅时加香油簸
 匀上盘。
 
