--- a/latex/recipe-066.tex
+++ b/latex/recipe-066.tex
@@ -54,7 +54,7 @@
 \step 白糖、醋、酱油放入小碗中搅匀，成汁待用。
 
 \step 锅在火炉上烧红，倒入菜油二斤，在旺火上烧热。把鸡肉（拣去葱、姜）放入油内
-炸五分钟左右，呈金黄色时捞出；泌去锅中余油，将锅仍放火炉上，再倒入菜油二两五烧
+炸五分钟左右，呈金黄色时捞出；滗去锅中余油，将锅仍放火炉上，再倒入菜油二两五烧
 热，放入辣椒、花椒、陈皮稍炸，随即再倒下鸡块，炒匀后即烹入糖醋汁，再次炒匀起锅
 入盘，淋上香油即成。
 
