--- a/latex/recipe-067.tex
+++ b/latex/recipe-067.tex
@@ -48,7 +48,7 @@
 
 \step 红萝卜洗净去皮，用筷子刮萝卜成茸，心子不用。
 
-\step 化猪油在旺火上烧至七成火，即将拌芡的鸡丁倒下，炒散，泌去油；锅内留油二
+\step 化猪油在旺火上烧至七成火，即将拌芡的鸡丁倒下，炒散，滗去油；锅内留油二
 两，即将红萝卜茸煵出红色后，连同鸡丁炒匀，立即烹入料酒、盐、豆粉兑成的滋汁，即
 起锅，同时淋香油少许。
 
