--- a/latex/recipe-076.tex
+++ b/latex/recipe-076.tex
@@ -49,7 +49,7 @@
 发胀，洗净，大朵的用刀切成两瓣。
 
 \step 用包罐装清水下鸡腿，煮沸打净血泡，加葱、姜、料酒、糖汁、酱油、盐，在文火
-上烧至鸡肉离骨，再加入口蘑烧𤆵，即拈入条盘砌好，滋汁泌入炒锅内，勾芡，将鸡油淋
+上烧至鸡肉离骨，再加入口蘑烧𤆵，即拈入条盘砌好，滋汁滗入炒锅内，勾芡，将鸡油淋
 在鸡腿上即成。
 
 \features
