--- a/latex/recipe-078.tex
+++ b/latex/recipe-078.tex
@@ -53,9 +53,9 @@
 酱油、𰪿糟、料酒、花椒等抹在鸡的内外，抹匀，渍一小时。
 
 \step 将锅放在旺火上，倒下菜油，烧至八、九成热时将鸡取出搽干（原汁留用），投入
-油锅内炸熟炸透；泌去余油，将抹鸡时的原汁一并倒入锅内，放下胡椒、白糖、香油、味
+油锅内炸熟炸透；滗去余油，将抹鸡时的原汁一并倒入锅内，放下胡椒、白糖、香油、味
 精、清汤，将锅内的滋汁收至一半为止，然后将鸡捞起放在墩子上宰成一寸二长、五分宽
-的长方块，按照鸡的原形摆入盘内（鸡脯向上）。将锅内滋汁泌入碗内，将碗内的姜、
+的长方块，按照鸡的原形摆入盘内（鸡脯向上）。将锅内滋汁滗入碗内，将碗内的姜、
 葱、花椒捞出剁成细末后在滋汁碗内调匀，淋于鸡脯的面上即成。
 
 \features
