--- a/latex/recipe-082.tex
+++ b/latex/recipe-082.tex
@@ -54,7 +54,7 @@
 
 \step 泡辣椒去蒂和籽，宰碎；葱切细花；姜、蒜切细米。
 
-\step 旺火将油烧至六成热，分散投入渍好的鸡块，炸黄捞起；油再热一成，再炸一次泌
+\step 旺火将油烧至六成热，分散投入渍好的鸡块，炸黄捞起；油再热一成，再炸一次滗
 油；留油约一两，把鸡拨在一边，依次下泡辣椒、葱、姜、蒜共炒匀；随即将酱油、醋、
 白糖、料酒、味精、水豆粉、清汤兑成的滋汁勾匀烹入，簸几下起锅。
 
