--- a/latex/recipe-089.tex
+++ b/latex/recipe-089.tex
@@ -54,7 +54,7 @@
 \step 网油平铺案上，先抹上蛋清豆粉，再把拌好味的各种丝子用网油裹起，裹成、三分
 厚、一寸五宽的卷约四至六条，用刀尖放气。
 
-\step 旺火将油烧五至六成热。鸡卷先在干豆粉内滚一层，下油锅炸呈金黄色。泌炸油，
+\step 旺火将油烧五至六成热。鸡卷先在干豆粉内滚一层，下油锅炸呈金黄色。滗炸油，
 淋点香油翻匀，起锅斜切成四分长的条块入盘。另一端镶生菜，走菜时同上花椒盐。
 
 \features
