--- a/latex/recipe-096.tex
+++ b/latex/recipe-096.tex
@@ -61,7 +61,7 @@
 
 \step 用小铝锅一个，先在锅底放入猪骨或鸡骨数节，即将清汤、红白酱油、葱、姜、料
 酒、盐及鸡卷依次放入锅内，用文火烧三十分钟，即将鸡卷拈入二鱼碗，摆成“三叠水”定
-好；再将汁水倒入，去掉姜、葱、骨节，上笼蒸约十分钟取出，汁水泌入锅内，鸡卷翻入
+好；再将汁水倒入，去掉姜、葱、骨节，上笼蒸约十分钟取出，汁水滗入锅内，鸡卷翻入
 盘中。
 
 \features
