--- a/latex/recipe-098.tex
+++ b/latex/recipe-098.tex
@@ -63,7 +63,7 @@
 装入盘内。
 
 \step 将锅放在旺火上倒入菜油，烧至八成火后，将鸡糕全部倒下，炸至浅黄色，皮已
-酥，泌去炸油，将香油淋于鸡糕，起锅入条盘的一端；再将生菜用糖、醋、香油拌好，放
+酥，滗去炸油，将香油淋于鸡糕，起锅入条盘的一端；再将生菜用糖、醋、香油拌好，放
 入条盘的另一端即成。
 
 \features
