--- a/latex/recipe-099.tex
+++ b/latex/recipe-099.tex
@@ -72,7 +72,7 @@
 
 \step 大炒锅内放入菜油，在旺火上烧至八成热时，即将鸡顺着锅边放入，腹部向上（向
 下容易炸糊）炸五分钟；炸时用汤瓢将鸡不断拨动，并圈沸油往鸡腹上不断浇淋；待鸡身
-炸成金黄色时泌去炸油，淋入香油起锅。随后用刀将腹部轻轻划成象眼块，以将皮划断为
+炸成金黄色时滗去炸油，淋入香油起锅。随后用刀将腹部轻轻划成象眼块，以将皮划断为
 度，不可深及肉内。上盘时抽、掉颈部竹签，随同椒盐二碟上席。
 
 \features
