--- a/latex/recipe-104.tex
+++ b/latex/recipe-104.tex
@@ -50,7 +50,7 @@
 渍半小时后，用纸蒙紧碗口，上笼蒸两小时（时间根据鸭的老嫩临时掌握），至𤆵为止。
 
 \step 菜油在旺火上烧红，将鸭由笼上取出，去掉葱、姜后放入锅内，用瓢翻动炸成金黄
-色，泌去炸油，淋上香油起锅。上盘时周围镶以拌好的生菜及葱、酱两碟同上。
+色，滗去炸油，淋上香油起锅。上盘时周围镶以拌好的生菜及葱、酱两碟同上。
 
 \features
 
