--- a/latex/recipe-109.tex
+++ b/latex/recipe-109.tex
@@ -46,7 +46,7 @@
 \preparation
 
 \step 选水盆鸭子小开洗净，用盐和𰪿糟浮子调匀，满身内外涂遍，然后将葱、姜、花椒
-放入腹内，加汤、放胡椒，上笼旺火蒸𤆵后，取出晾冷，取去骨架，原汤泌出，去掉姜、
+放入腹内，加汤、放胡椒，上笼旺火蒸𤆵后，取出晾冷，取去骨架，原汤滗出，去掉姜、
 葱渣等，晾冷待用。
 
 \step 黄豆入沸水煮𤆵，下锅加味精、盐，收干，扦在盘内；上面将鸭砍成一字条，摆成
