--- a/latex/recipe-114.tex
+++ b/latex/recipe-114.tex
@@ -54,7 +54,7 @@
 放进味精、胡椒、料酒及盐，用汤瓢调匀，随即倾下水豆粉，调和均匀后即起锅待用。
 
 \step 将豆渣用清水淘洗干净，挤干水份；锅内猪油用旺火烧热后，即投入豆渣翻炒，约
-需十分钟，炒至豆渣呈黄色，而且不吸油只吐油时，泌去油，加进锅内的原汁拌匀，舀在
+需十分钟，炒至豆渣呈黄色，而且不吸油只吐油时，滗去油，加进锅内的原汁拌匀，舀在
 鸭子上即成。
 
 另一作法：先将鸭子出一水，蒸𤆵去骨，然后上笼蒙上纸蒸𤆵（其余操作过程同上）。
