--- a/latex/recipe-119.tex
+++ b/latex/recipe-119.tex
@@ -54,7 +54,7 @@
 
 \step 𰪿糟浮子、甜酱、酱油、胡椒面、白糖、味精、水豆粉及清汤少许兑成滋汁。
 
-\step 炒锅在旺火上烧红，舀入猪油浪匀泌去，再换温油，鸭肝倒下用瓢子轻轻将油浪转
+\step 炒锅在旺火上烧红，舀入猪油浪匀滗去，再换温油，鸭肝倒下用瓢子轻轻将油浪转
 炒匀，鸭肝快熟时即烹滋汁炒几下，淋香油将锅两簸即起锅。
 
 \features
