--- a/latex/recipe-121.tex
+++ b/latex/recipe-121.tex
@@ -49,7 +49,7 @@
 再将肚片的一端折转，穿入肚片另一端的裂缝中，使之相互穿稳不脱，用清水漂起。香
 菜掐留叶子，与胡椒面分别装入小碟。
 
-\step 双脆泌去清水装入荷叶碗，汤在锅内烧沸，用汤瓢舀汤在碗内，将双脆冒一下，连
+\step 双脆滗去清水装入荷叶碗，汤在锅内烧沸，用汤瓢舀汤在碗内，将双脆冒一下，连
 续冒三次，双脆已有五成熟，然后先搭盐用瘦肉扫汤，等汤清好后再将双脆冒一下，这时
 双脆已有七成熟，汤内加味精，起锅加酱油提色，灌入双脆碗内，随同香菜、胡椒面碟子
 上席。
