--- a/latex/recipe-123.tex
+++ b/latex/recipe-123.tex
@@ -50,7 +50,7 @@
 \step 切好的𬂁肝丝，加酱油、料酒、姜、葱，拌和均匀，渍十分钟，摊在盘内，盘子斜
 放，去净血水。
 
-\step 油在锅内烧至八成热，将𬂁肝炸干水气捞起；泌去炸油，留油二两，把干辣椒煵成
+\step 油在锅内烧至八成热，将𬂁肝炸干水气捞起；滗去炸油，留油二两，把干辣椒煵成
 黄色；倒下花椒，烹入料酒，梭下𬂁肝，加酱油，掺汤，下味精、白糖，滋汁收干，淋香
 油于𬂁肝上，几簸起锅。
 
