--- a/latex/recipe-125.tex
+++ b/latex/recipe-125.tex
@@ -51,7 +51,7 @@
 
 \step 将锅放在旺火上，放下化猪油烧至六成火，将拌好蛋清豆粉的鸭腰一块一块地放入
 锅内炸，炸进皮后，用筷子夹入盘内；将锅内的油烧至八成，把全部鸭腰一并倒入油锅，
-炸成金黄色，泌去锅内的油，淋下香油，起锅入盘，放在盘的一端。
+炸成金黄色，滗去锅内的油，淋下香油，起锅入盘，放在盘的一端。
 
 \step 将生菜淘洗干净，切成丝或撕成块，放入糖、醋拌匀，盛入鸭腰盘的另一端。
 
