--- a/latex/recipe-126.tex
+++ b/latex/recipe-126.tex
@@ -57,7 +57,7 @@
 段，泡红辣椒切成斜丝，葱白切成长二寸的段。
 
 \step 锅在旺火上放入猪油，烧至五成热时，放入拌好的鱼丝，即将锅端离火口，用筷子
-轻轻翻拨，使成团的鱼丝散开成一根一根的条。然后锅内留油一两左右，泌去余油，重放
+轻轻翻拨，使成团的鱼丝散开成一根一根的条。然后锅内留油一两左右，滗去余油，重放
 于旺火上，将鱼丝推在锅边，锅稍倾斜，放入姜、蒜、辣椒丝、葱白和芹黄段，煸炒十余
 下，再与鱼丝一起炒匀，随即将事先兑好的酱油、白糖、醋、味精、香油、水豆粉和清汤
 等调料从锅边淋下，用汤瓢推掀两下，再端起锅颠簸几下，使调味均匀，火候一致即成。
