--- a/latex/recipe-127.tex
+++ b/latex/recipe-127.tex
@@ -53,7 +53,7 @@
 
 \step 料酒、白糖、味精、盐、酱油、醋、清汤加水豆粉少许兑成滋汁。
 
-\step 锅在旺火上烧红，下猪油，烧至五成热，即将鱼片倒下，用筷子轻轻滑散，泌去余
+\step 锅在旺火上烧红，下猪油，烧至五成热，即将鱼片倒下，用筷子轻轻滑散，滗去余
 油，即将兰花、慈菇片投入造匀，立即烹下滋汁，起锅即成。
 
 \features
