--- a/latex/recipe-131.tex
+++ b/latex/recipe-131.tex
@@ -53,12 +53,12 @@
 胆）、挖掉鳃，清洗干净后在鱼身两面各斜划三刀，在划口处抹上少许盐；姜、蒜均切成
 半分厚、三分见方的薄片；葱白斜切成六分长的段（也可切成末子）。
 
-\step 豆腐切成一寸半长、一寸宽、五分厚的长方形块，用开水在锅内煮五分钟后把水泌
+\step 豆腐切成一寸半长、一寸宽、五分厚的长方形块，用开水在锅内煮五分钟后把水滗
 去，再加入清汤一斤、盐六分移在微火上焰着待用。
 
 \step 锅在旺火上放入猪油，烧至八成热时投入鲫鱼，稍煎至两面均呈浅黄色时，把炒
 锅放斜，将鱼拨在锅边，用原油将剁细的豆瓣炸酥，再将炒锅放正，把鱼拨还原，随即加
-以料酒，并依次加入酱油、清汤、姜、蒜、葱白。这时就将焅好的豆腐泌去汤汁，同鱼一
+以料酒，并依次加入酱油、清汤、姜、蒜、葱白。这时就将焅好的豆腐滗去汤汁，同鱼一
 起和烧十分钟左右，放入𰪿糟、甜酱、味精用汤瓢轻轻搅转，即用筷子将豆腐拨开，把鱼
 拈出放在较大的窝盘内，随即用水豆粉勾芡，将豆腐连汁倒在鱼面上即成。
 
