--- a/latex/recipe-132.tex
+++ b/latex/recipe-132.tex
@@ -56,7 +56,7 @@
 兰片、菌子均切成一寸二长的细丝。
 
 \step 炒锅内倒入菜油，烧沸后以手提鱼尾，先将鱼头放入锅内，立即翻转炸另一边，将
-鱼炸成深黄色，泌去余油，捞入盘中；留油二两将葱、姜、蒜、泡辣椒、兰片、菌子等全
+鱼炸成深黄色，滗去余油，捞入盘中；留油二两将葱、姜、蒜、泡辣椒、兰片、菌子等全
 部入锅炒匀，即将酱油、白糖、醋和二汤、水豆粉调匀入锅，以汤瓢搅匀成浓汁并起小
 泡、呈金黄色时，即将盘中的鱼以净布盖上，用手拍，使鱼身松软，将锅内浓汁淋于鱼
 面，撒上葱丝、泡辣椒丝即成。
