--- a/latex/recipe-138.tex
+++ b/latex/recipe-138.tex
@@ -56,7 +56,7 @@
 的对剖；金钩用温水淘洗干净；葱切成一寸长的节；鲜笋去壳，取嫩颠，切成长一寸、宽
 五分、厚一分的片；姜刮洗干净，拍破。
 
-\step 将鱼投入油锅中稍炸捞起，泌去炸油留油二两，姜、葱下锅微煵一下，烹入清汤，
+\step 将鱼投入油锅中稍炸捞起，滗去炸油留油二两，姜、葱下锅微煵一下，烹入清汤，
 即将火腿、鸡皮、口蘑、鲜笋放入，加料酒，投下鱼，并加胡椒、白糖、盐，在小火上烧
 五分钟翻面，继续烧五分钟，用竹筷将鱼拈入鱼盘内，锅内再加味精，勾二流芡，起锅，
 淋鸡油在鱼上即成。
