--- a/latex/recipe-148.tex
+++ b/latex/recipe-148.tex
@@ -52,7 +52,7 @@
 脱。
 
 \step 菜油烧至八成火，即将气过的鱼卷在蛋清豆粉内滚一层，边滚边逐个放入油内，待
-炸至金黄色即将油泌去，淋入香油，将炒锅几颠，即上盘，镶生菜上桌，连椒盐二碟同
+炸至金黄色即将油滗去，淋入香油，将炒锅几颠，即上盘，镶生菜上桌，连椒盐二碟同
 上。
 
 \features
