--- a/latex/recipe-149.tex
+++ b/latex/recipe-149.tex
@@ -56,9 +56,9 @@
 半边。然后把剩余的蛋清豆粉合鱼片拌匀，一片一片地盖在铺好笋子、火腿蒙的肥膘上
 盖好。
 
-\step 先将炒锅在火上把锅的周围炕热，下油一两浪匀后，提离火口泌尽油；分别拣起鱼
+\step 先将炒锅在火上把锅的周围炕热，下油一两浪匀后，提离火口滗尽油；分别拣起鱼
 片将肥膘的一面贴在锅上，先贴锅边后贴锅底；贴完后放在火上炕，随时用手将锅车动，
-使火候匀净；炕至肥膘成鸭黄色时，将就烤出的油将鱼片浪熟后，将余油泌去，加香油起
+使火候匀净；炕至肥膘成鸭黄色时，将就烤出的油将鱼片浪熟后，将余油滗去，加香油起
 锅，盛入白色条盘，镶上生菜即上席。
 
 \features
