--- a/latex/recipe-150.tex
+++ b/latex/recipe-150.tex
@@ -59,7 +59,7 @@
 
 \step 走菜时将鱼丸气热，将锅放于火炉上，下油烧至六成火，放下姜、葱、蒜、味精、
 胡椒、盐、口蘑、鲜笋、火腿等片稍炒数转，加入清汤，放下水豆粉，勾芡，兑成滋汁；
-将炒好的鲜菜放在盘内，将漂起的鱼丸泌去汤，入锅推数转盛于盘内即成。
+将炒好的鲜菜放在盘内，将漂起的鱼丸滗去汤，入锅推数转盛于盘内即成。
 
 \features
 
