--- a/latex/recipe-154.tex
+++ b/latex/recipe-154.tex
@@ -50,8 +50,8 @@
 \step 鲜虾用手挤仁去壳，漂于清水中，淘去杂质；然后将水气滤干，加上蛋清豆粉、盐
 少许拌匀。
 
-\step 炒锅在旺火上烧红，先舀油浪匀泌去，另舀新油，烧至五成火候，即倒下虾仁，先
-用筷子滑散，多余的油泌去，即下慈菇、火腿丁炒转，再下滋汁，炒几转即起锅。
+\step 炒锅在旺火上烧红，先舀油浪匀滗去，另舀新油，烧至五成火候，即倒下虾仁，先
+用筷子滑散，多余的油滗去，即下慈菇、火腿丁炒转，再下滋汁，炒几转即起锅。
 
 \features
 
