--- a/latex/recipe-156.tex
+++ b/latex/recipe-156.tex
@@ -53,7 +53,7 @@
 
 \step 猪油一斤放入锅中，在火上烧热。用竹筷一双将蛋清豆粉和虾仁搅匀；蘸上一些蛋
 清豆粉入油中试一下，如油微微现出在冒热烟时便将虾仁倒入油中，随即用竹筷将虾仁滑
-散，马上泌去余油。然后放入蚕豆仁，即将滋汁烹入炒匀起锅入盘。
+散，马上滗去余油。然后放入蚕豆仁，即将滋汁烹入炒匀起锅入盘。
 
 \features
 
