--- a/latex/recipe-159.tex
+++ b/latex/recipe-159.tex
@@ -53,7 +53,7 @@
 拌成馅。
 
 \step 炒锅烧红用油炙过，掺油少许在锅内浪匀，将馅用调羹舀成直径一寸二的圆饼若干
-个贴于锅内，煎到浅黄色，即将全部猪油倒入，淹没虾饼，逐渐浸透炸熟，泌去油，淋香
+个贴于锅内，煎到浅黄色，即将全部猪油倒入，淹没虾饼，逐渐浸透炸熟，滗去油，淋香
 油少许起锅，盘内镶拌好的生菜连同椒盐上席。
 
 \features
