--- a/latex/recipe-166.tex
+++ b/latex/recipe-166.tex
@@ -61,7 +61,7 @@
 
 \step 将另一口锅放在炉上，舀入四两烧鹿筋的汤，再将淘洗干净的乌鸡白菜心放入，煮
 𤆵后起锅，盛入大圆盘中。然后把砂锅中鸡块捞出，盖在白菜上；再把砂锅中鹿筋捞出，
-有次序地摆在鸡块上。最后将砂锅中的汤泌入炒锅中，用旺火熬酽，淋于盘中菜上入席。
+有次序地摆在鸡块上。最后将砂锅中的汤滗入炒锅中，用旺火熬酽，淋于盘中菜上入席。
 
 \features
 
