--- a/latex/recipe-175.tex
+++ b/latex/recipe-175.tex
@@ -54,7 +54,7 @@
 火腿切成七分宽、一寸二长的骨牌片子。
 
 \step 将锅放在旺火上，倒入化猪油，烧至五成热时，放下姜、葱，爆出香味，再倒入清
-汤烧开，打去姜、葱不用；再将豆腐皮泌去清水用二汤过一次（去掉碱味），再倒入锅内；
+汤烧开，打去姜、葱不用；再将豆腐皮滗去清水用二汤过一次（去掉碱味），再倒入锅内；
 鱿鱼、鸡皮、火腿同盐、胡椒、味精，依次投入锅内，烧开时再勾入水豆粉成清二流芡，
 放入豌豆尖，起锅时淋化鸡油盛入大窝盘内即成。
 
