--- a/latex/recipe-176.tex
+++ b/latex/recipe-176.tex
@@ -54,7 +54,7 @@
 蛋清豆粉，并将海参入蛋清豆粉拌匀待用。
 
 \step 锅放在火炉上倒下猪油，烧至八成火，将蛋清拌好的海参投入锅内，用竹筷滑散；
-呈金黄色时泌去锅内的油，再放下三种粗丝，微炒数下放入鸡汤、酱油、味精、料酒，合
+呈金黄色时滗去锅内的油，再放下三种粗丝，微炒数下放入鸡汤、酱油、味精、料酒，合
 匀，放入豆粉成二流芡；将起锅时将晚香玉倒下，造转合匀，盛入盘内即成。
 
 \features
