--- a/latex/recipe-180.tex
+++ b/latex/recipe-180.tex
@@ -52,7 +52,7 @@
 
 \step 将锅放在火炉上倒入鸡汤，烧至微开；再用少量清水将鸡脯茸子解散，倒入锅内；
 肉沫浮起用瓢子打捞干净无杂质；放下味精、盐、胡椒、料酒；汤烧开后，并将盘内的鱼
-翅汤泌去装入大碗内，用清汤过两次，再将锅内的汤圈入碗内即成。
+翅汤滗去装入大碗内，用清汤过两次，再将锅内的汤圈入碗内即成。
 
 \features
 
