--- a/latex/recipe-181.tex
+++ b/latex/recipe-181.tex
@@ -60,7 +60,7 @@
 \step 锅放炉上，用猪油烧红，随即放入猪肉、鸡肉、火腿煸炒；加料酒、红酱油、酱
 油、盐炒匀；再将葱、姜、二汤等全部放入，然后放入鱼翅布包，煨二小时。另用炒锅一
 个放炉上，用猪油将白菜心煸三分钟，加红酱油和烧鱼翅的原汁煮三分钟，起锅盛入一圆
-盘中。再将鱼翅布包解开，将鱼翅放菜心上，原汁泌入炒锅中（其他各料另作他用），用
+盘中。再将鱼翅布包解开，将鱼翅放菜心上，原汁滗入炒锅中（其他各料另作他用），用
 旺火熬酽，加味精调匀和鸡油淋于鱼翅上上席。
 
 \features
