--- a/latex/recipe-184.tex
+++ b/latex/recipe-184.tex
@@ -59,7 +59,7 @@
 出。
 
 \step 锅放在旺火上，倒入特级清汤，加料酒、胡椒、盐，烧至汤开，倒入茸子；肉末浮
-起，用瓢子打尽浮沫及杂质；把鱼肚卷用清汤过一次泌去，滑入碗内；再将锅内的汤放下
+起，用瓢子打尽浮沫及杂质；把鱼肚卷用清汤过一次滗去，滑入碗内；再将锅内的汤放下
 味精，倒入碗内即成。
 
 \features
