--- a/latex/recipe-186.tex
+++ b/latex/recipe-186.tex
@@ -46,7 +46,7 @@
 \step 先将𧎼蛀去尽玉带，淘净后放入碗内，加入清水上笼蒸𤆵；将鸡蛋打破放入盐和味
 精调匀；再将火腿剁成细末。
 
-\step 取出笼内的𧎼蛀，泌去碗内的汁不用，用手搓散，再搅入鸡蛋。
+\step 取出笼内的𧎼蛀，滗去碗内的汁不用，用手搓散，再搅入鸡蛋。
 
 \step 将锅放于旺火上，放入化猪油，烧至八成热时倒入拌匀的蛋及𧎼蛀，倒下时用瓢子
 不停地炒转（使之不成坨），炒至干香为止。扦入走菜盘内，再倒入清汤，加盐及水豆粉
