--- a/latex/recipe-188.tex
+++ b/latex/recipe-188.tex
@@ -56,7 +56,7 @@
 团成绣球形；放入笼内蒸五分钟至熟取出。
 
 \step 走菜时先将“绣球”拣入蒸碗内掺清汤少许，加胡椒、料酒上笼馏热；锅内掺清汤烧
-开吃味，再将汤清扫两次；然后将馏热的“绣球”泌去汤汁倒入锅内，汤开时盛碗上席。
+开吃味，再将汤清扫两次；然后将馏热的“绣球”滗去汤汁倒入锅内，汤开时盛碗上席。
 
 \features
 
