--- a/latex/recipe-212.tex
+++ b/latex/recipe-212.tex
@@ -51,7 +51,7 @@
 成一寸二分长、六分宽、一分厚的薄片。
 
 \step 炒锅放在旺火上放入猪油烧至七成热，将冬笋倒入，用汤瓢翻搅，稍煸一下，即将
-猪油泌去，将笋装入盘中；盐白菜将水挤干，去掉花椒，用刀切成细末，用原猪油同样在
+猪油滗去，将笋装入盘中；盐白菜将水挤干，去掉花椒，用刀切成细末，用原猪油同样在
 锅内炒一下；随即将盘中的笋子倒入，再加入鸡汤、料酒、盐、味精，用汤瓢搅匀，烧约
 三分钟，即用水豆粉勾芡。然后顺着锅淋下鸡油，起锅即成。
 
