--- a/latex/recipe-213.tex
+++ b/latex/recipe-213.tex
@@ -46,7 +46,7 @@
 好）。鸡皮切成长一寸、宽六分的片。
 
 \step 猪油在旺火上烧至六成热时，将冬笋倒下，炒约一分钟，刚熟（保持白色，不能炸
-黄）泌尽猪油，即下盐和料酒，将笋簸转，掺入奶汤及鸡皮，合烧三分钟时间，起锅时放
+黄）滗尽猪油，即下盐和料酒，将笋簸转，掺入奶汤及鸡皮，合烧三分钟时间，起锅时放
 鸡油，盛碗上席。
 
 \features
