--- a/latex/recipe-214.tex
+++ b/latex/recipe-214.tex
@@ -46,7 +46,7 @@
 
 \preparation
 
-\step 用开刀将露笋一听打开，听内的原汁泌入一个干净碗内待用。露笋倒入另一个碗，
+\step 用开刀将露笋一听打开，听内的原汁滗入一个干净碗内待用。露笋倒入另一个碗，
 撕去有根露笋的皮衣，放在墩子上，以笋尖整齐为度，用刀从半中腰切断；笋头先横放于
 条盘内，分两堆，刀口都向外，再将笋尖放在笋头的上边；摆好后再将露笋的原汁汤由上
 面淋入盘内，走菜时，配下面四样碟子上席。
