--- a/latex/recipe-218.tex
+++ b/latex/recipe-218.tex
@@ -70,7 +70,7 @@
 豆粉加入清水少许调匀将茄饼放入，用手从下向上轻轻翻转，把蛋清豆粉沾裹完，再放入
 油中炸成金黄色捞起，滤尽油，摆入盘中。
 
-\step 锅内泌去余油，留油一两半放在旺火上，待油冒烟时下姜、蒜末，炒香，随将酱
+\step 锅内滗去余油，留油一两半放在旺火上，待油冒烟时下姜、蒜末，炒香，随将酱
 油、盐、水豆粉、料酒、味精、白糖、泡红辣椒末（将泡辣椒剁成极细碎末）等放在一个
 碗内，将清汤一同倾入锅中，烧至汤浓缩冒大泡时，放入葱末，起锅淋在茄饼上即成。
 
