--- a/latex/recipe-228.tex
+++ b/latex/recipe-228.tex
@@ -57,7 +57,7 @@
 五分钟取出，晾冷用刀切成一寸八长、二分五宽的条子定碗，定时有颜色的一面挨碗底，
 以二十四条摆成万字形；其余的用碗装满，加入鸡油、料酒及清汤少许，再上笼蒸五分
 钟。走菜时用白油将建兰菜炒好垫入盘内，取出笼内的豆腐皮翻入菜上，锅内加入清汤，
-见开泌下碗内的原汁，加入味精，起锅时加入鸡油，倒入盘内即成。
+见开滗下碗内的原汁，加入味精，起锅时加入鸡油，倒入盘内即成。
 
 \features
 
