--- a/latex/recipe-233.tex
+++ b/latex/recipe-233.tex
@@ -48,8 +48,8 @@
 钟。
 
 \step 炒锅放炉上，倒入特级清汤，加胡椒面、料酒、盐烧开。同时将蒸笼内的白菜出
-笼，泌去蒸碗中的汤不用，将下余特级清汤均匀地淋在白菜上，务使全部淋透，再将清汤
-泌去不用，将白菜翻入大汤碗中，最后将锅中加好味的特级清汤舀入汤碗中上席。
+笼，滗去蒸碗中的汤不用，将下余特级清汤均匀地淋在白菜上，务使全部淋透，再将清汤
+滗去不用，将白菜翻入大汤碗中，最后将锅中加好味的特级清汤舀入汤碗中上席。
 
 \features
 
