--- a/latex/recipe-247.tex
+++ b/latex/recipe-247.tex
@@ -57,7 +57,7 @@
 
 \step 炒锅放于旺火上，放入一斤半清汤、料酒、盐，再将捶好的猪瘦肉茸子用清水解
 散，倒入锅内用汤瓢推动数转，肉沫浮起打尽；再将鸡脯肉用清水解散倒入锅内，肉沫浮
-起打尽杂质。装鸽蛋的碗泌去清汤，再用清汤过一次，翻入大碗内，放入味精，将锅内的
+起打尽杂质。装鸽蛋的碗滗去清汤，再用清汤过一次，翻入大碗内，放入味精，将锅内的
 清汤倒入鸽蛋碗内即成。
 
 \features
