--- a/latex/recipe-249.tex
+++ b/latex/recipe-249.tex
@@ -58,7 +58,7 @@
 上碾细的干豆粉。
 
 \step 猪油在旺火上烧至五成火后，即将裹好豆粉的鸽蛋下入，边炸边翻动；炸至金黄
-色，泌去油，淋入香油，簸匀起锅，上盘时镶入生菜、椒盐即成。
+色，滗去油，淋入香油，簸匀起锅，上盘时镶入生菜、椒盐即成。
 
 \features
 
