--- a/latex/recipe-253.tex
+++ b/latex/recipe-253.tex
@@ -60,7 +60,7 @@
 成热，把鸽蛋顺锅边投入，用汤瓢慢慢拨动，炸约五分钟，至鸽蛋见黄色即捞起待用。
 
 \step 鸽子蒸好后去掉碗口的皮筋纸及姜、葱、花椒不用，取出鸽子摆在盘内，下面两
-只，上面一只，再将炸好的鸽蛋镶在鸽子的周围。随后把蒸鸽子的原汁汤泌在炒锅里，加
+只，上面一只，再将炸好的鸽蛋镶在鸽子的周围。随后把蒸鸽子的原汁汤滗在炒锅里，加
 入胡椒面、味精，开锅后用水豆粉勾芡，淋于鸽子及鸽蛋上即成。
 
 \features
