--- a/latex/recipe-257.tex
+++ b/latex/recipe-257.tex
@@ -55,7 +55,7 @@
 少许，抹匀后分别插在土司上（每片六个分两边插），上笼蒸五分钟取出晾冷，每片土司
 再开为六片待用。
 
-\step 菜油在旺火上烧至七成火候，将土司倒入锅内炸至浅黄色，将油泌去，淋上香油，
+\step 菜油在旺火上烧至七成火候，将土司倒入锅内炸至浅黄色，将油滗去，淋上香油，
 簸匀起锅入盘。
 
 \step 白糖、香油、葱白、甜酱，兑成葱酱，镶入盘另一端入席。
