--- a/latex/recipe-258.tex
+++ b/latex/recipe-258.tex
@@ -56,7 +56,7 @@
 做完三十片。
 
 \step 将锅置于旺火，倒入化猪油，烧至四成火，再一个个地放下土司（糁向上，土司向
-下），由低温到高温，土司的颜色接近黄色（形色同杏圆相似），泌去锅内炸油，淋入香
+下），由低温到高温，土司的颜色接近黄色（形色同杏圆相似），滗去锅内炸油，淋入香
 油，起锅入条盘的一端。再将生菜淘洗干净，滤干水份，拌入糖、醋、香油、味精，放在
 杏圆土司的另一端即成。
 
