--- a/latex/recipe-259.tex
+++ b/latex/recipe-259.tex
@@ -54,13 +54,13 @@
 \preparation
 
 \step 干冬菇选菌盖直径约八分，大小均匀的二十四朵，用清水一大碗泡半小时，至泡胀
-而未全胀时泌去水（另作他用）。换清水用手指在冬菇周围凸凹不平地方掏去泥沙，淘洗
+而未全胀时滗去水（另作他用）。换清水用手指在冬菇周围凸凹不平地方掏去泥沙，淘洗
 干净，用刀齐盖底切去茎（作别用）；然后放在沸水中煮约十分钟，端离火口浸泡十分钟
-捞出；再换清水烧沸同样再煮一次，泌去煮水不用。此时菌盖直径已发胀至一寸二分左
+捞出；再换清水烧沸同样再煮一次，滗去煮水不用。此时菌盖直径已发胀至一寸二分左
 右，则已干净胀透。
 
 猪油倒入炒锅内，在旺火上烧至五成热，将葱白段、姜（去皮、拍松）、盐、料酒、鸡汤
-依次放入，再加入冬菇、味精、胡椒面同烧五分钟，使冬菇入味，将汤泌去，把冬菇捞入
+依次放入，再加入冬菇、味精、胡椒面同烧五分钟，使冬菇入味，将汤滗去，把冬菇捞入
 筲箕中，将水滤干后放盘中摊开，切去茎的一面，向上摆好待用。
 
 \step 鸡脯肉去掉外面一层白膜，在菜墩上用刀背捶成茸，边捶边用刀口刮去肉内白筋，
