--- a/latex/recipe-260.tex
+++ b/latex/recipe-260.tex
@@ -48,7 +48,7 @@
 
 \preparation
 
-\step 口蘑选用大小均匀的，用清水泡半小时泌去水作别用，再换清水淘洗去泥沙。洗净
+\step 口蘑选用大小均匀的，用清水泡半小时滗去水作别用，再换清水淘洗去泥沙。洗净
 后用沸水煮十分钟，而后再换水煮十分钟，发至胀透，即成水发口蘑。鸡蛋清与豆粉调成
 干湿适度的蛋清豆粉。
 
@@ -59,7 +59,7 @@
 \step 猪油放入锅内，于旺火上烧至五成热，将裹好蛋清豆粉的口蘑逐个放入稍炸。若火
 过旺即将锅端离火口，炸至口蘑上的蛋清豆粉刚熟（看不见黄色仍是白的）即捞入盘中。
 要边放边捞，以免炸糊。若有粘连，可用手掰开。再将锅在旺火上烧至八成热，将盘中炸
-过的口蘑全部倒入，约炸五分钟呈金黄色时泌去炸油，随即淋入香油，捞出盛入盘中。另
+过的口蘑全部倒入，约炸五分钟呈金黄色时滗去炸油，随即淋入香油，捞出盛入盘中。另
 以四个小碟盛入蕃茄酱（蕃茄酱加香油、白糖、味精、盐各少许）蘸食。
 
 \features
