--- a/latex/recipe-263.tex
+++ b/latex/recipe-263.tex
@@ -53,7 +53,7 @@
 
 \step 将竹荪用温水泡胀，换清水洗数次，放在墩子上用刀修去两头，剖开成为六分宽、
 二寸长的片子，共四十八片；将片的同一方向的两头修去呈半圆形，共修二十四片，余下
-的二十四片用斜刀切断呈箭头形；将四十八片竹荪一并放入沸水内汆过，泌去清水，用好
+的二十四片用斜刀切断呈箭头形；将四十八片竹荪一并放入沸水内汆过，滗去清水，用好
 汤煨一次，放入碗内装好待用。
 
 \step 鸡蛋摊成蛋皮；鲜笋煮熟放在碗内；丝瓜刮后车下皮，洗净，切成二寸长的段，用
