--- a/latex/recipe-022.tex
+++ b/latex/recipe-022.tex
@@ -45,7 +45,7 @@
 见方的颗，再入沸水内汆一次，去其浮油，捞起晾干水气，即在连蛋黄的蛋豆粉内裹上一
 层，即成待用的肉丸。
 
-\step 菜油烧至八成火，将肉丸入油锅炸至浅黄色捞起。油泌尽后，在锅内放入白糖及少
+\step 菜油烧至八成火，将肉丸入油锅炸至浅黄色捞起。油滗尽后，在锅内放入白糖及少
 许清水，炒至糖汁起大泡时加入芝麻，即倒入炸过的肉丸，边炒边将锅几颠，使肉丸裹糖
 起锅。敞风，糖即干，盛盘。
 
