--- a/latex/recipe-068.tex
+++ b/latex/recipe-068.tex
@@ -52,7 +52,7 @@
 丁，鸡蛋合干豆粉搅成蛋清豆粉，盐、料酒、水豆粉、味精、胡椒面、清汤合兑成滋汁。
 
 \step 鸡肉丁用蛋清豆粉、盐、料酒拌和均匀，即投入炙过的五成热的油锅，用筷子滑
-散，即投入火腿、慈菇，再滑散后将锅提离火口，泌去油剩约一两，再将锅放在火上，把
+散，即投入火腿、慈菇，再滑散后将锅提离火口，滗去油剩约一两，再将锅放在火上，把
 各丁拨在一边，放入葱末一煸，然后动作要快，烹入滋汁，用瓢浪一转，加香油或鸡油起
 锅，盛入深色条盘。
 
