--- a/latex/recipe-070.tex
+++ b/latex/recipe-070.tex
@@ -47,7 +47,7 @@
 
 \step 兰花去茎抽心，淘洗干净，用清水漂起。
 
-\step 旺火先将锅炙后，猪油烧至四成火成温热油，将鸡丝倒下，用筷子滑散，将油泌
+\step 旺火先将锅炙后，猪油烧至四成火成温热油，将鸡丝倒下，用筷子滑散，将油滗
 尽，再加入兰花、味精及剩余的盐和料酒，在锅内炒匀，加清汤，勾清芡，簸匀起锅。
 
 \features
