--- a/latex/recipe-084.tex
+++ b/latex/recipe-084.tex
@@ -51,13 +51,13 @@
 \step 先将鸡脯肉清洗干净，在墩子上捶茸后放在碗内；用二两鸡汤解散，投入豆粉、味
 精、盐、料酒搅匀；将六个鸡蛋的蛋清投入解散的鸡茸内搅匀待用。
 
-\step 将锅放在旺火上，倒下化猪油，烧至六成热时泌去油，用汤瓢将搅好的鸡茸舀入油
+\step 将锅放在旺火上，倒下化猪油，烧至六成热时滗去油，用汤瓢将搅好的鸡茸舀入油
 锅，摊成直径八寸、厚五厘的圆片，铲起放入盛有二汤的碗内；将鸡茸一直照样摊完（共
 八片），放入碗内待用。
 
 \step 火腿、口蘑、鲜笋、鸡皮都切成旗子块的小片。将锅放在火炉上，下猪油，倒入火
 腿、口蘑、鲜笋、鸡皮、豌豆尖苞，炒动几转，倒下鸡汤四两，勾芡，然后将泡在碗内的
-鸡茸片泌去二汤下锅造匀，起 锅时淋入鸡油即成。
+鸡茸片滗去二汤下锅造匀，起 锅时淋入鸡油即成。
 
 \features
 
