--- a/latex/recipe-122.tex
+++ b/latex/recipe-122.tex
@@ -61,7 +61,7 @@
 过菜心，焖二十分钟即𤆵，端至微火上焅起。
 
 \step 另将锅放在旺火上烧热，放入猪油、葱白，煸至油冒烟时，即将鸭舌、掌从笼内取
-出，去姜葱不用，将滋汁泌入油锅中，然后将锅中葱白捞去，加入酱油、味精、胡椒面和
+出，去姜葱不用，将滋汁滗入油锅中，然后将锅中葱白捞去，加入酱油、味精、胡椒面和
 口蘑等，用汤瓢搅匀，随即将舌掌等倒入锅中一边，再将青菜心从另锅中捞出（余汤不
 用）放入锅中另一边，同烧约四分钟。等汁约余四两左右时，用漏瓢将菜心捞起放在盘中
 心，再将舌、掌捞出放在菜心上面，然后将水豆粉入锅勾芡，淋入鸡油起锅，淋在舌、掌
