--- a/latex/recipe-130.tex
+++ b/latex/recipe-130.tex
@@ -51,7 +51,7 @@
 \step 鲫鱼剖腹、去鳞、去鳃、去内脏后洗净，鱼身两面立划四刀。泡青菜切成长四分
 的短节细丝，姜、蒜去皮连同鱼辣椒剁为细末，葱子切成细花。
 
-\step 菜油在旺火上烧红，将鱼放入锅内炸三分钟，至鱼身现震裂纹时将油泌去，留二
+\step 菜油在旺火上烧红，将鱼放入锅内炸三分钟，至鱼身现震裂纹时将油滗去，留二
 两菜油在锅内。将鱼辣椒、姜、蒜、葱、𰪿糟等下锅煵出香味，依次放入料酒、酱油、
 红酱油、清汤等，将鱼用中火烧起，汤开后放泡青菜，翻面约十分钟，待鱼入味后再放
 葱花、香油，勾芡起锅。
