--- a/latex/recipe-187.tex
+++ b/latex/recipe-187.tex
@@ -49,7 +49,7 @@
 
 \step 整开乌参一支，先在微火上燎二分钟，把粗皮烧成小泡，用刀刮净，剖开。入开水
 泡发二天（时间发得愈久，海参愈是软透），取出洗净腹内杂质。锅内倒入清水烧沸，加
-料酒，把开乌参放入汆一次；泌去汆后的水，再如前法汆第二次；汆过以后用布揩干，用
+料酒，把开乌参放入汆一次；滗去汆后的水，再如前法汆第二次；汆过以后用布揩干，用
 刀于参的腹内划成棋子块的花纹（使它易于摊开），用清水漂好待用。
 
 \step 口蘑用清水泡发，去掉蘑足；洗净去渣；冬笋去壳，切去老根；肥瘦猪肉去皮洗
@@ -59,7 +59,7 @@
 酒，炒匀，约炒四分钟，成暗红色待用。
 
 \step 取出漂好的海参，两端用刀修切整齐，背面贴于蒸碗，把炒好的猪肉、火腿丁等装
-入海参腹内，碗内加二汤、味精、盐，碗口用纸封固，入笼蒸一小时。吃时翻扣盘中，泌
+入海参腹内，碗内加二汤、味精、盐，碗口用纸封固，入笼蒸一小时。吃时翻扣盘中，滗
 出蒸碗内原汁加水豆粉调匀，淋于海参上面。
 
 \features
