--- a/latex/recipe-230.tex
+++ b/latex/recipe-230.tex
@@ -61,7 +61,7 @@
 旺火上摊成蛋皮。蛋皮及痩火腿先各切成细丝，再切成细末，按在摊好的豆腐糁上，每片
 放上火腿及蛋皮末各一半，然后在盘内摆好，上笼蒸约五分钟即熟，取出。
 
-\step 炒锅放在旺火上烧至七成热，倒入猪油将锅转动，使锅内粘上一层油，即泌去油，
+\step 炒锅放在旺火上烧至七成热，倒入猪油将锅转动，使锅内粘上一层油，即滗去油，
 随将蒸好的豆腐（肥肉片向下）逐个贴在锅内约煎八分钟。煎时将锅左右前后移动，以免
 糊锅。煎至肉底呈现金黄色、豆腐呈浅黄色时，淋入香油，将炒锅转动一下即起锅。把有
 火腿末的一面向上摆在盘的一端；将淘洗干净的生菜掐叶去根（长约一寸二分），用糖、
