--- a/latex/recipe-237.tex
+++ b/latex/recipe-237.tex
@@ -50,7 +50,7 @@
 \step 慈菇削皮，淘净，切成头粗丝。鱼辣椒去籽，切成马耳朵。兰花抽心，去茎，用清
 水漂起。将料酒、盐、味精，加清汤、水豆粉少许，兑成滋汁。
 
-\step 锅在旺火上先烧红，猪油倒入浪转泌去，再换油烧至八成火，即将田鸡倒下，炒
+\step 锅在旺火上先烧红，猪油倒入浪转滗去，再换油烧至八成火，即将田鸡倒下，炒
 散，再加慈菇、兰花、鱼辣椒，造匀，烹滋汁即成。
 
 \features
