Add a note for BI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -71,6 +71,17 @@
 
 \vspace{1\baselineskip}%
 
+二、七、八、九、二〇、二二、二四、二八、二九、三一、三六、三七、三八、四四、四
+九、五〇、五四、五五、六五、六六、六七、六八、七〇、七六、七八、七九、八二、八
+四、八九、九一、九二、九三、九六、九八、九九、一〇四、一〇六、一〇九、一一三、
+一一四、一一九、一二一、一二二、一二三、一二五、一二六、一二七、一三〇、一三
+一、一三二、一三三、一三七、一三八、一四一、一四三、一四八、一四九、一五〇、一
+五四、一五六、一五九、一六六、一七五、一七六、一八〇、一八一、一八二、一八四、
+一八六、一八七、一八八、一九一、二一二、二一三、二一四、二一六、二一七、二一
+八、二二八、二三〇、二三三、二三四、二三七、二四三、二四七、二四九、二五二、二
+五三、二五六、二五七、二五八、二五九、二六〇、二六三，“滗”。《四》本《八》本作
+“泌”。径改。“滗”，滤。
+
 六、锅巴肉片。《四》本《八》本标题作“锅粑肉片”。据《中》本改。
 
 七、水煮肉片。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
