--- a/latex/recipe-004.tex
+++ b/latex/recipe-004.tex
@@ -46,7 +46,7 @@
 \step 猪肉洗净，切成长一寸五的二粗丝；干辣椒、葱及鲜笋也切成二粗丝。
 
 \step 油在锅内烧红，将辣椒放下，炸呈浅黄色捞起；再倒下肉丝，煵干水气后，加料
-酒、酱油、味精、盐，后加笋丝，继续久煵，煵酥亮油，下辣椒、葱丝造匀，扦入盘内即
+酒、酱油、味精、盐，后加笋丝，继续久煵，煵酥亮油，下辣椒、葱丝造匀，搛入盘内即
 成。
 
 \features
