--- a/latex/recipe-071.tex
+++ b/latex/recipe-071.tex
@@ -55,7 +55,7 @@
 放入碗内待用。
 
 \step 将鸡蛋及豆粉拌成蛋清豆粉，鸡丁同蛋清豆粉拌匀；再将锅放于旺火上烧红，放入
-化猪油，烧至三成火后用手将调好的鸡丁抖入锅内，用竹筷滑散，扦入盘内。撇去锅内的
+化猪油，烧至三成火后用手将调好的鸡丁抖入锅内，用竹筷滑散，搛入盘内。撇去锅内的
 余油，留一两五油在锅内，放入姜、葱、蒜片及海椒茸，炒散；再放入料酒、味精、盐、
 白糖、清汤、酱油，炒匀；再将盘内的鸡丁，倒入锅内，稍拨几转起锅即成。
 
