--- a/latex/recipe-094.tex
+++ b/latex/recipe-094.tex
@@ -42,7 +42,7 @@
 成与鸡片长宽相等，约一分五厚的鸡糁片子，每片糁的上面贴上鸡片，鸡片的每丝中各㮟
 入火腿、丝瓜皮、冬菇、蛋黄等丝子间成彩色，上笼蒸五分钟。
 
-\step 汤在锅内扫清亮，走菜时将笼上的鸡片取下扦入碗中灌入清汤即成。
+\step 汤在锅内扫清亮，走菜时将笼上的鸡片取下搛入碗中灌入清汤即成。
 
 \features
 
