--- a/latex/recipe-100.tex
+++ b/latex/recipe-100.tex
@@ -56,7 +56,7 @@
 料酒、拍松的姜、葱和匀。将鸡周身内外抹匀，装入碗内渍起。
 
 \step 芽菜洗净盐沙，泡辣椒去蒂去籽及猪肉分别剁细，先将猪肉下入菜油锅煵去血水，
-加酱油烹入料酒，再下芽菜、辣椒，造转扦起。
+加酱油烹入料酒，再下芽菜、辣椒，造转搛起。
 
 \step 鸡渍一小时后，提起抖掉葱、姜、花椒，将煵好的馅子装入腹内。
 
