--- a/latex/recipe-109.tex
+++ b/latex/recipe-109.tex
@@ -49,7 +49,7 @@
 放入腹内，加汤、放胡椒，上笼旺火蒸𤆵后，取出晾冷，取去骨架，原汤滗出，去掉姜、
 葱渣等，晾冷待用。
 
-\step 黄豆入沸水煮𤆵，下锅加味精、盐，收干，扦在盘内；上面将鸭砍成一字条，摆成
+\step 黄豆入沸水煮𤆵，下锅加味精、盐，收干，搛在盘内；上面将鸭砍成一字条，摆成
 全鸭形，淋上蒸鸭的原汁上席。
 
 \features
