--- a/latex/recipe-112.tex
+++ b/latex/recipe-112.tex
@@ -53,7 +53,7 @@
 架，留鸭脯及两腿保持完整，摆入蒸碗。
 
 \step 火腿、兰片、金钩及撕下的鸭肉切成碎颗，加盐、味精，伙入鸡蛋调匀，下入油锅
-炒熟，扦入鸭碗内，上笼馏热，再翻入圆盘。
+炒熟，搛入鸭碗内，上笼馏热，再翻入圆盘。
 
 \step 锅内将油烧热，烹入清汤，加味精、盐、水豆粉，勾成二流芡，起锅加鸡油淋上即
 成。
