--- a/latex/recipe-113.tex
+++ b/latex/recipe-113.tex
@@ -51,7 +51,7 @@
 
 \step 豆渣再用刀剁一次、剁细。热锅，温油，用文火炒。猪油可作两三次下，一直将豆
 渣炒得与猪油混合时加盐少许，再继续将豆渣炒香，炒酥，吐油，呈深牙黄色。走菜时鸭
-脯取出去纸，翻入盘中，将原汁滗入锅内，再加清汤与炒酥的豆渣混合炒匀，扦于鸭脯周
+脯取出去纸，翻入盘中，将原汁滗入锅内，再加清汤与炒酥的豆渣混合炒匀，搛于鸭脯周
 围即成。
 
 \features
