--- a/latex/recipe-172.tex
+++ b/latex/recipe-172.tex
@@ -49,7 +49,7 @@
 \step 选体薄干透的鱿鱼，用铡刀横起铡成细丝，在温热水内淘洗一次捞起；绿豆芽选体
 长的掐去头足；肥瘦肉切成二粗丝。
 
-\step 菜油烧至五成热，先将肉丝倒下煵干水气，加酱油、料酒少许烹下造转，扦入盘内
+\step 菜油烧至五成热，先将肉丝倒下煵干水气，加酱油、料酒少许烹下造转，搛入盘内
 待用。
 
 \step 用菜油在锅内烧至七成热，将鱿鱼丝倾下造转，散后成卷曲形，即倒入煵好的肉
