--- a/latex/recipe-178.tex
+++ b/latex/recipe-178.tex
@@ -53,7 +53,7 @@
 
 \step 猪油用旺火烧至八成热，即将“鸡浆”临时加鸡汤兑匀倒入，用瓢子轻轻搅推几转，
 炒熟成鸡淖；先舀一半入走菜盘中。将煨起的鱼翅换汤再煨一次，滤去水，倒入锅中，与
-余下的鸡淖混合造匀，扦入走菜盘面上，撒火腿末即成。
+余下的鸡淖混合造匀，搛入走菜盘面上，撒火腿末即成。
 
 \features
 
