--- a/latex/recipe-224.tex
+++ b/latex/recipe-224.tex
@@ -47,10 +47,10 @@
 
 \step 豆腐下锅，加盐少许，微煮后捞起滴干，用丝箩过一道，加捣细的盐和胡椒、味
 精、料酒、豆粉搅匀，平均分成两个碗装起。取蛋清及蛋黄，分别放入两个碗内，再调匀。
-白菜秧泹后浸冷，挤干宰细，煵后扦起待用。
+白菜秧泹后浸冷，挤干宰细，煵后搛起待用。
 
-\step 猪油（一两五）在炒锅内烧至九成热，即倒入白色的豆腐淖，炒散，扦入盘内的一
-边，撒上火腿蒙。同法再以其余的猪油炒好黄色豆腐淖，扦入盘内的另一边，撒上白菜秧
+\step 猪油（一两五）在炒锅内烧至九成热，即倒入白色的豆腐淖，炒散，搛入盘内的一
+边，撒上火腿蒙。同法再以其余的猪油炒好黄色豆腐淖，搛入盘内的另一边，撒上白菜秧
 末（青色）即成。
 
 \features
