--- a/latex/recipe-226.tex
+++ b/latex/recipe-226.tex
@@ -52,7 +52,7 @@
 清、豆粉、面粉、盐、味精、料酒、胡椒、化猪油合搅成“糁”。葱切成一寸二长的花葱。
 盐合花椒面成椒盐。
 
-\step 用九寸平底盘抹上猪油，扦入豆腐糁，平铺约五分厚，上笼蒸约五分钟，取出晾
+\step 用九寸平底盘抹上猪油，搛入豆腐糁，平铺约五分厚，上笼蒸约五分钟，取出晾
 冷，切成五分宽、一寸长的一字条。再将一字条裹上豆粉，投入六成热的油锅，炸至牙黄
 色时捞起，装入条盘中心。盘的一端镶葱、酱、蒜片，一端镶椒盐即成。
 
