--- a/latex/recipe-236.tex
+++ b/latex/recipe-236.tex
@@ -53,7 +53,7 @@
 是绵的。）
 
 \step 另用干净锅放油一两，在中火上烧热，相继放入牛肉、酱油、清汤、白糖、五香面
-在锅内搅匀，待滋汁收干即起锅；起锅时放花椒面，扦在盘内，先将牛肉敞开散热，再用
+在锅内搅匀，待滋汁收干即起锅；起锅时放花椒面，搛在盘内，先将牛肉敞开散热，再用
 柏枝熏一下，去掉葱、姜即成。
 
 \features
