--- a/latex/recipe-240.tex
+++ b/latex/recipe-240.tex
@@ -55,7 +55,7 @@
 
 \step 肉茸合慈菇、金钩颗装在大碗内，加剩余调散的鸡蛋三分之一，同时加进豆粉（二
 钱）、料酒（二钱）、盐（一分）、味精少许、胡椒面少许拌匀；把蛋皮铺在墩子上，将
-拌好的肉茸扦一半均匀地抹在蛋皮上，两手从左右两边向中心卷成“如意”形；上笼蒸约
+拌好的肉茸搛一半均匀地抹在蛋皮上，两手从左右两边向中心卷成“如意”形；上笼蒸约
 两分钟，取出晾冷后，切成二分厚的片子待用。
 
 \step 取汤瓢一个在火上烤热，用肥膘炙过，拿小调羹一个，舀起一调羹调散的蛋，倒入
@@ -63,7 +63,7 @@
 皮一边，再将另一边的蛋皮翻过来粘上成饺子形；如是作法将所有鸡蛋和肉茸做成十二个
 蛋饺，上笼蒸一分多钟取出待用。
 
-\step 白菜秧心子淘洗干净，用化猪油（五钱）煸炒扦在盘内晾起；同时将生鸡油盛入小
+\step 白菜秧心子淘洗干净，用化猪油（五钱）煸炒搛在盘内晾起；同时将生鸡油盛入小
 碗上笼蒸化。用蒸碗一个铺上网油，再将切好的“如意卷”及蛋饺对镶一层，剩下材料全部
 放在碗底，清汤倒入，再拈入白菜秧，淋鸡油五钱，上笼蒸一分钟取出，翻入白瓷条盘，
 再将清汤（二两）合其余味精、料酒（三钱）、盐（二分）、水豆粉（一钱），勾二流
