--- a/latex/recipe-256.tex
+++ b/latex/recipe-256.tex
@@ -59,7 +59,7 @@
 着贴在“糁”上约一分厚，用手按平不脱，自成五色，每片同样贴好，上笼蒸五分钟取出。
 
 \step 锅内掺油在旺火上烧至七成火，将土司放入，贴细末一面向上，炸成金黄色，将油
-滗尽，淋上香油扦起；再用刀改成五分宽、一寸二长的条子（切时按五色切开使每片都现
+滗尽，淋上香油搛起；再用刀改成五分宽、一寸二长的条子（切时按五色切开使每片都现
 彩色），装在条盘的一端，另一端放生菜。走菜时随椒盐一碟同上。
 
 \features
