--- a/latex/recipe-092.tex
+++ b/latex/recipe-092.tex
@@ -58,7 +58,7 @@
 粉内裹一转，放入锅内炸透捞起，放在圆盘内。滗去锅内余油，放入建兰菜炒熟，再加少
 许料酒、盐，起锅入走菜盘内；再放入一两化油入锅内，烧至六成火，倒下兑好的滋汁
 （盐、料酒、味精、豆粉、清汤）成二流芡，再将炸好的鸡卷滑入锅内，起锅淋入香油，
-扦入建兰菜的面上即成。
+搛入建兰菜的面上即成。
 
 \features
 
