--- a/latex/recipe-133.tex
+++ b/latex/recipe-133.tex
@@ -58,7 +58,7 @@
 \step 炒锅在旺火上烧红，舀入菜油，浪转滗去，再换一两，将肉末下锅煵至散籽、亮
 油、煵酥，先放盐、料酒、姜、葱再煵一下，即放鱼、𰪿糟、白糖、酱油，掺入清汤，在
 中火上烧十分钟，翻面再烧，烧至收干亮油。起锅时淋入香油，拈鱼入盘，再将锅内调料
-造匀，扦在鱼上即成。
+造匀，搛在鱼上即成。
 
 \features
 
