--- a/latex/recipe-173.tex
+++ b/latex/recipe-173.tex
@@ -55,12 +55,12 @@
 的汤不用、再放入清汤，放下捞起的海参，再煨一道捞起放在盘内。
 
 \step 锅内的汤倒去，放在炉上，放下化猪油，烧至四成火倒入烂肉，放下料酒、盐，煵
-散后，扦入碗内，再放下化猪油和建兰菜，炒熟，加少许盐、料酒，起锅装于走菜的盘
+散后，搛入碗内，再放下化猪油和建兰菜，炒熟，加少许盐、料酒，起锅装于走菜的盘
 内。
 
 \step 放入余下的化油入锅内，放入豆瓣煵出红色，放下甜酱、清汤，打尽豆瓣渣，将海
 参及烂肉一并倒入锅内，加料酒、酱油、味精、蒜苗花，烧至亮油，加水豆粉，起锅时淋
-入香油，扦入建兰菜的面上即成。
+入香油，搛入建兰菜的面上即成。
 
 \features
 
