Add a note for JIAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -82,6 +82,10 @@
 五三、二五六、二五七、二五八、二五九、二六〇、二六三，“滗”。《四》本《八》本作
 “泌”。径改。“滗”，滤。
 
+四、二四、七一、七九、九二、九四、一〇〇、一〇九、一一二、一一三、一三三、一七
+二、一七三、一七八、一八六、二〇四、二二四、二二六、二三六、二四〇、二五六，
+“搛”。《四》本《八》本作“扦”。径改。“搛”，（用筷子）夹。
+
 六、锅巴肉片。《四》本《八》本标题作“锅粑肉片”。据《中》本改。
 
 七、水煮肉片。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
