--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -71,28 +71,17 @@
 
 \vspace{1\baselineskip}%
 
-二、七、八、九、二〇、二二、二四、二八、二九、三一、三六、三七、三八、四四、四
-九、五〇、五四、五五、六五、六六、六七、六八、七〇、七六、七八、七九、八二、八
-四、八九、九一、九二、九三、九六、九八、九九、一〇四、一〇六、一〇九、一一三、
-一一四、一一九、一二一、一二二、一二三、一二五、一二六、一二七、一三〇、一三
-一、一三二、一三三、一三七、一三八、一四一、一四三、一四八、一四九、一五〇、一
-五四、一五六、一五九、一六六、一七五、一七六、一八〇、一八一、一八二、一八四、
-一八六、一八七、一八八、一九一、二一二、二一三、二一四、二一六、二一七、二一
-八、二二八、二三〇、二三三、二三四、二三七、二四三、二四七、二四九、二五二、二
-五三、二五六、二五七、二五八、二五九、二六〇、二六三，“滗”。《四》本《八》本作
-“泌”。径改。“滗”，滤。
+二、七、八……全书各篇目，“滗”。《四》本《八》本作“泌”。径改。“滗”，滤。
 
-四、二四、七一、七九、九二、九四、一〇〇、一〇九、一一二、一一三、一三三、一七
-二、一七三、一七八、一八六、二〇四、二二四、二二六、二三六、二四〇、二五六，
-“搛”。《四》本《八》本作“扦”。径改。“搛”，（用筷子）夹。
+四、二四、七一……全书各篇目，“搛”。《四》本《八》本作“扦”。径改。“搛”，（用筷
+子）夹。
 
 六、锅巴肉片。《四》本《八》本标题作“锅粑肉片”。据《中》本改。
 
 七、水煮肉片。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
-八、一一、一六、一七、三五、五四、七三、七八、一〇九、一一五、一一九、一三〇、
-一三一、一三三、一三六、一六五、二一一、二七二、二七六、二八二、二九八，各本皆
-作“𰪿糟”。“𰪿”系“𫃑”之类推简化字。据《现代汉语词典》，今作“醪糟”。
+八、一一、一六……全书各篇目，“𰪿糟”。“𰪿”系“𫃑”之类推简化字。据《现代汉语词
+典》，今作“醪糟”。
 
 九、芙蓉肉片。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》
 本改。
@@ -108,9 +97,7 @@
 
 二二、三三，“肉丸”。《四》本《八》本作“肉元”。径改。
 
-二四、四八、五五、七五、七六、八四、八七、九二、一〇七、一一一、一一六、一一
-八、一二二、一二四、一二八、一三四、一三八、一五〇、一五五、一八七、二一七、二
-二三、二二五、二六〇、二六一，“口蘑”。《四》本《八》本作“口茉”。据《中》本
+二四、四八、五五……全书各篇目，“口蘑”。《四》本《八》本作“口茉”。据《中》本
 《重》本改。
 
 二八、二九、三三、一六三、二〇五、二〇六、二〇八、二五八、二七一，“圆”。《四》
@@ -146,8 +133,7 @@
 
 四八、菠饺白肺。“水龙头”，《四》本《八》本作“水笼头”。径改。
 
-五〇、七九、八五、九一、一五八、二一四、二二〇、二三〇、二五六、二六〇、二七
-四，“蕃茄”。据《现代汉语词典》，今作“番茄”。
+五〇、七九、八五……全书各篇目，“蕃茄”。据《现代汉语词典》，今作“番茄”。
 
 五二、六三、一四九、二五四，“劖”。《八》本作
 “{\bfseries\raise.19em\hbox{\scalebox{.675}[.75]{免}}\kern-.675em%
@@ -159,8 +145,7 @@
 
 五五、六九、一五三，“须”。《四》本作“鬚”。据《八》本改。
 
-五五、一八六、一八八、一八九、二二三、二六一、二八八、二九三，“𧎼蛀”。今作
-“珧柱”。干贝。
+五五、一八六、一八八……全书各篇目，“𧎼蛀”。今作“珧柱”。干贝。
 
 五六、烤酥方。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本皆
 作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
@@ -201,8 +186,7 @@
 
 一二〇、一二一、一二三、二二三、二五七、二六二，“𬂁”。“肫”之异体字。鸟类的胃。
 
-一二〇、一二九、一三〇、一三二、一三三、一三四、一三五、一三六、一三七、一三
-八、一四一、一四三、一四四、一五一、一五二、二七二，“鳃”。各本作“腮”。径改。
+一二〇、一二九、一三〇……全书各篇目，“鳃”。各本作“腮”。径改。
 
 一二一、汆双脆。《四》本《八》本标题作“川双脆”。径改。
 
