Fix note for JIAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -157,7 +157,7 @@
 六七、六八、八二、九二、一一八、一二七、一五〇、二五五、二八〇、三〇一，“熘”。
 《四》本《八》本作“溜”。径改。
 
-七一、贵州鸡。“扦入盘内”。“扦”，《八》本作“擀”。误。
+七一、贵州鸡。“搛入盘内”。“搛”，《八》本作“擀”。误。
 
 七三、旱蒸全鸡。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
