Fix note of JIQIAO

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -178,7 +178,7 @@
 一〇〇、包烧鸡。“𫃕”，{c\'{i}}{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}
 粘稠。
 
-一〇一、包烧鸡。“鸡翘”，疑误。
+一〇一、包烧鸡。“鸡翘”，鸡屁股。
 
 一〇二、魔芋烧鸭。“魔芋”，《四》本《八》本作“茉芋”。径改。
 
